--- a/src/lang/en_US.json
+++ b/src/lang/en_US.json
@@ -67,7 +67,8 @@
     "week": "within a week",
     "month": "within one month",
     "all": "all",
-    "fs_money": "Rebate wallet",
+    "money_rebate": "Rebate wallet",
+    "money_fanyong": "Rebate wallet",
     "money": "central wallet",
     "moneyLogAmount": "Turnover amount",
     "validAmount": "Effective amount",
