--- a/src/lang/ko-KR.json
+++ b/src/lang/ko-KR.json
@@ -67,7 +67,8 @@
     "week": "일주일내",
     "month": "일개월내",
     "all": "전부",
-    "fs_money": "캐시백지갑",
+    "money_rebate": "캐시백지갑",
+    "money_fanyong": "캐시백지갑",
     "money": "중심지갑",
     "moneyLogAmount": "매출금액",
     "validAmount": "유효금액",
