--- a/src/lang/th_TH.json
+++ b/src/lang/th_TH.json
@@ -67,7 +67,8 @@
     "week": "ภายในหนึ่งสัปดาห์",
     "month": "ภายในหนึ่งเดือน",
     "all": "ทั้งหมด",
-    "fs_money": "ส่วนลดกระเป๋าสตางค์",
+    "money_rebate": "ส่วนลดกระเป๋าสตางค์",
+    "money_fanyong": "ส่วนลดกระเป๋าสตางค์",
     "money": "กระเป๋าเงินกลาง",
     "moneyLogAmount": "จำนวนการหมุนเวียน",
     "validAmount": "ปริมาณที่มีประสิทธิภาพ",
