--- a/src/lang/vi_VN.json
+++ b/src/lang/vi_VN.json
@@ -67,7 +67,8 @@
     "week": "trong vòng một tuần",
     "month": "trong vòng một tháng",
     "all": "tất cả",
-    "fs_money": "Ví giảm giá",
+    "money_rebate": "Ví giảm giá",
+    "money_fanyong": "Ví giảm giá",
     "money": "ví trung tâm",
     "moneyLogAmount": "Số tiền doanh thu",
     "validAmount": "Số tiền hiệu quả",
