--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -67,7 +67,8 @@
     "week": "一周内",
     "month": "一月内",
     "all": "全部",
-    "fs_money": "返水钱包",
+    "money_rebate": "返水钱包",
+    "money_fanyong": "返佣钱包",
     "money": "中心钱包",
     "moneyLogAmount": "流水金额",
     "validAmount": "有效金额",
