--- a/src/lang/zh-TW.json
+++ b/src/lang/zh-TW.json
@@ -58,7 +58,8 @@
     "week": "一週內",
     "month": "一月內",
     "all": "全部",
-    "fs_money": "返水錢包",
+    "money_rebate": "返水錢包",
+    "money_fanyong": "返佣錢包",
     "money": "中心錢包",
     "moneyLogAmount": "流水金額",
     "validAmount": "有效金額",
