--- a/src/lang/en_US.json
+++ b/src/lang/en_US.json
@@ -1,234 +1,295 @@
 {
   "main": {
-    "index": "Front page",
-    "gift": "discount",
-    "kf": "customer service",
-    "mine": "mine",
+    "index": "Home",
+    "gift": "Promotions",
+    "kf": "Support",
+    "mine": "My Account",
     "collectionSuccess": "Collection successful",
     "noLogin": "Not logged in",
     "loginCheck": "Log in to view"
   },
   "user": {
-    "register": "register",
-    "settings": "Set up",
-    "conactUs": "Contact us"
+    "register": "Register",
+    "settings": "Settings",
+    "conactUs": "Contact Us"
   },
   "noData": "No data",
-  "all": "all",
-  "activity_detail": "Event details",
+  "all": "All",
+  "activity_detail": "Event Details",
   "mine": {
-    "safeSetting": "Security settings",
+    "safeSetting": "Security Settings",
     "aboutUs": "About Us",
-    "logout": "Log out",
-    "loginPwd": "Login password",
-    "withdrawPwd": "Withdraw password",
+    "logout": "Log Out",
+    "loginPwd": "Login Password",
+    "withdrawPwd": "Withdrawal Password",
     "deposit": "Deposit",
     "withdraw": "Withdraw",
-    "vip": "VIP privileges",
-    "quickDeposit": "Quick recharge",
-    "sunmitWithdraw": "Apply for withdrawal",
-    "bankManage": "Bank card management",
-    "edit": "Revise",
-    "addBind": "Add binding",
-    "modifyLoginPwd": "Change login password",
-    "settingWithdrawalPwd": "Set withdrawal password",
-    "modifyWithdrawalPwd": "Change withdrawal password",
+    "vip": "VIP Privileges",
+    "quickDeposit": "Quick Deposit",
+    "sunmitWithdraw": "Apply for Withdrawal",
+    "bankManage": "Bank Card Management",
+    "edit": "Edit",
+    "addBind": "Add Binding",
+    "modifyLoginPwd": "Change Login Password",
+    "settingWithdrawalPwd": "Set Withdrawal Password",
+    "modifyWithdrawalPwd": "Change Withdrawal Password",
     "currPwd": "Current Password",
-    "inputCurrPwd": "Please fill in the old password",
+    "inputCurrPwd": "Please enter old password",
     "newPwd": "New Password",
-    "inputNewPwd": "Please fill in new password",
-    "confrmNewPwd": "Confirm new password",
-    "newPwdDiff": "The new password entered twice is inconsistent.",
-    "successAndLoginAgain": "Modification successful, please log in again",
-    "qknewPwd": "Withdrawal password",
+    "inputNewPwd": "Please enter new password",
+    "confrmNewPwd": "Confirm New Password",
+    "newPwdDiff": "New passwords do not match",
+    "successAndLoginAgain": "Modified successfully, please log in again",
+    "qknewPwd": "Withdrawal Password",
     "inputPlz": "Please enter",
     "inputPlzAgain": "Please enter again",
-    "inputTisDiff": "Two inputs are inconsistent",
-    "confrmqkPwd": "Confirm withdrawal password",
-    "name": "username",
-    "canDrawMoney": "Withdrawal amount",
-    "shouChannel": "Payment address",
-    "cardName": "Cardholder name",
-    "cardAccount": "bank account",
-    "drawMoney": "Withdrawal amount",
-    "drawingPwd": "Withdrawal password",
-    "allMoney": "all",
+    "inputTisDiff": "Entries do not match",
+    "confrmqkPwd": "Confirm Withdrawal Password",
+    "name": "Username",
+    "canDrawMoney": "Available for Withdrawal",
+    "shouChannel": "Payment Address",
+    "cardName": "Cardholder Name",
+    "cardAccount": "Bank Account",
+    "drawMoney": "Withdrawal Amount",
+    "drawingPwd": "Withdrawal Password",
+    "allMoney": "All",
     "notSetDrawingPwd": "You have not set a withdrawal password. Please set a withdrawal password before proceeding.",
     "bindDrawingAddress": "Please bind your bank card first",
-    "vipDetial": "Promotion rules",
-    "vipLiJin": "Promotion bonus",
-    "bet": "bet",
-    "allDaBiao": "All standards met",
-    "moneyLog": "Log Records",
-    "operateType": "Change type",
-    "walletType": "Amount type",
-    "today": "that day",
-    "yestoday": "yesterday",
-    "week": "within a week",
-    "month": "within one month",
-    "all": "all",
-    "money_rebate": "Rebate wallet",
-    "money_fanyong": "Rebate wallet",
-    "money": "central wallet",
-    "moneyLogAmount": "Turnover amount",
-    "validAmount": "Effective amount",
-    "gameLog": "Game records",
-    "totalBetAmount": "Total bet amount",
-    "totalWinLoss": "Total win or loss",
-    "apiType": "Interface type",
-    "gameType": "game type",
-    "tuiguanG": "Promote and make money",
-    "baseInfo": "Basic information",
-    "transferAmount": "Credit conversion",
-    "totalBalance": "Account balance",
-    "inputTransferMoney": "Please enter the transfer amount",
+    "vipDetial": "Promotion Rules",
+    "vipLiJin": "Promotion Bonus",
+    "bet": "Bet",
+    "allDaBiao": "All Standards Met",
+    "moneyLog": "Transaction Records",
+    "operateType": "Change Type",
+    "walletType": "Amount Type",
+    "today": "Today",
+    "yestoday": "Yesterday",
+    "week": "Within a Week",
+    "month": "Within a Month",
+    "all": "All",
+    "money_rebate": "Rebate Wallet",
+    "money_fanyong": "Commission Wallet",
+    "money": "Main Wallet",
+    "moneyLogAmount": "Turnover Amount",
+    "validAmount": "Valid Amount",
+    "gameLog": "Game Records",
+    "totalBetAmount": "Total Bet Amount",
+    "totalWinLoss": "Total Win/Loss",
+    "apiType": "Interface Type",
+    "gameType": "Game Type",
+    "tuiguanG": "Promote & Earn",
+    "baseInfo": "Basic Information",
+    "transferAmount": "Credit Transfer",
+    "totalBalance": "Account Balance",
+    "inputTransferMoney": "Please enter transfer amount",
     "money2": "Amount",
-    "myCollection": "my collection",
-    "myNotices": "My message",
+    "myCollection": "My Collection",
+    "myNotices": "My Messages",
     "balance": "Balance",
-    "centerWalletBalance": "Central wallet balance",
-    "toGame": "Enter the game",
+    "centerWalletBalance": "Main Wallet Balance",
+    "toGame": "Enter Game",
     "loveIsHere": "Everything you love is here",
-    "mxdaikuan": "Borrow interest-free",
+    "mxdaikuan": "Interest-free Loan",
     "yuEBao": "Yu'E Bao",
-    "bankCard": "bank card",
-    "accountSafe": "Account and Security",
-    "safest": "Improve account information and be safer",
-    "persionalInfo": "personal information",
-    "normalFunc": "Commonly used functions",
-    "centerWallet": "central wallet",
-    "fsWallet": "Counterfeit wallet",
+    "bankCard": "Bank Card",
+    "accountSafe": "Account & Security",
+    "safest": "Complete account info for better security",
+    "persionalInfo": "Personal Information",
+    "normalFunc": "Common Functions",
+    "centerWallet": "Main Wallet",
+    "fsWallet": "Rebate Wallet",
     "welcomeTo": "Welcome to",
-    "levelRight": "Class privileges",
-    "pullMoney": "Promote money",
-    "loginRegister": "Login/Register"
+    "levelRight": "Level Privileges",
+    "pullMoney": "Promote & Earn",
+    "loginRegister": "Login/Register",
+    "passwordTooShort": "Password must be at least 6 characters"
   },
   "loading": "Loading...",
-  "submit": "submit",
-  "inputNewPwdAgain": "Please fill in the new password again",
+  "submit": "Submit",
+  "inputNewPwdAgain": "Please enter new password again",
   "success": "Operation successful",
   "noMore": "No more",
   "moneyLog": {
-    "detail": "record details",
-    "tradeMoney": "Transaction amount",
-    "beforeMoney": "Balance before transfer",
-    "afterMoney": "Balance after transfer",
-    "walletType": "wallet type",
-    "transferType": "Transfer type",
-    "desc": "Operation description",
-    "tradeDate": "trading hours",
+    "detail": "Record Details",
+    "tradeMoney": "Transaction Amount",
+    "beforeMoney": "Balance Before Transfer",
+    "afterMoney": "Balance After Transfer",
+    "walletType": "Wallet Type",
+    "transferType": "Transfer Type",
+    "desc": "Operation Description",
+    "tradeDate": "Transaction Time",
     "status": "Game Status"
   },
-  "fillIn": "fill in",
-  "changeAuto": "Switch to automatic",
-  "changeManual": "Switch to manual",
+  "fillIn": "Fill In",
+  "changeAuto": "Switch to Automatic",
+  "changeManual": "Switch to Manual",
   "confirm": "Confirm",
-  "dianzi": "video games",
-  "zhenren": "Live game",
-  "tiyu": "sports games",
-  "lottery": "lottery game",
-  "qipai": "Board games",
-  "fishGame": "Fishing game",
-  "noRecord": "No data yet",
+  "dianzi": "Electronic Games",
+  "zhenren": "Live Games",
+  "tiyu": "Sports Games",
+  "lottery": "Lottery Games",
+  "qipai": "Card Games",
+  "fishGame": "Fishing Games",
+  "noRecord": "No data available",
   "unread": "Unread",
   "readed": "Read",
-  "transferIn": "Transfer in",
-  "inputTransferInAmount": "Please enter the transfer amount",
+  "transferIn": "Transfer In",
+  "inputTransferInAmount": "Please enter transfer amount",
   "todayDoNotShow": "Don't show again today",
-  "enterGame": "Enter the game",
-  "transferInMoneyMustThan0": "The transfer amount must be greater than 0",
+  "enterGame": "Enter Game",
+  "transferInMoneyMustThan0": "Transfer amount must be greater than 0",
   "refreshBalanceFailed": "Failed to refresh balance",
   "depositFailed": "Failed to convert credit",
-  "moneyTransferMoneyNot": "Wallets cannot be converted to each other",
-  "daliySign": "Daily check-in",
+  "moneyTransferMoneyNot": "Wallets cannot transfer to each other",
+  "daliySign": "Daily Check-in",
   "support": {
-    "welcome": "Welcome to customer service center",
-    "mainCustom": "Mainline customer service",
-    "agentCoustom": "customer service representative",
-    "serviceTop": "Hourly dedicated line service, considerateness comes first"
+    "welcome": "Welcome to Customer Service Center",
+    "mainCustom": "Main Customer Service",
+    "agentCoustom": "Customer Service Representative",
+    "serviceTop": "24/7 Dedicated Service"
   },
   "selected": "Please select",
   "game": {
-    "myCollection": "my collection"
+    "myCollection": "My Collection"
   },
   "login": {
-    "openFixed": "Start the ultimate experience",
-    "inputAccount": "Please enter account number",
+    "openFixed": "Start Ultimate Experience",
+    "inputAccount": "Please enter account",
     "inputRight": "Please enter correct content",
     "inputPwd": "Please enter password",
-    "login": "Log in",
-    "forgetPwd": "forget the password?",
-    "register": "register",
-    "resetpwdForCustomer": "Please contact customer service to reset your password",
+    "login": "Login",
+    "forgetPwd": "Forgot password?",
+    "register": "Register",
+    "resetpwdForCustomer": "Please contact customer service to reset password",
     "loginSuccess": "Login successful"
   },
   "rememberMe": "Remember password",
-  "weiHuZhong": "Platform game maintenance...",
-  "pay_type": "Payment method",
-  "online_pay": "Pay online",
-  "company_pay": "Company deposit",
-  "pay_channel": "Payment channels",
-  "recharge_qrcode": "Payment QR code",
-  "recharge_account": "Payment account",
-  "copy": "copy",
-  "recharge_username": "Payment name",
-  "upload_cert": "Upload transfer voucher",
-  "transfer_account": "Transfer account",
+  "weiHuZhong": "Platform maintenance...",
+  "pay_type": "Payment Method",
+  "online_pay": "Online Payment",
+  "company_pay": "Company Deposit",
+  "pay_channel": "Payment Channel",
+  "recharge_qrcode": "Payment QR Code",
+  "recharge_account": "Payment Account",
+  "copy": "Copy",
+  "recharge_username": "Payment Name",
+  "upload_cert": "Upload Transfer Certificate",
+  "transfer_account": "Transfer Account",
   "transfer_user": "Transferor",
-  "iput_transfer_amount": "Please enter the transferor's name",
-  "transfer_amount": "Recharge amount",
-  "input_transfer_amount": "Please enter the recharge amount",
-  "account": "account",
-  "open_bank": "Account opening bank",
-  "input_recharge_amount": "Please enter the transfer account",
-  "rechate_address": "Recharge address",
-  "transfer_address": "Recharge address",
-  "input_transfer_addr": "Please enter the recharge address",
-  "transfer_out_address": "Transfer address",
-  "input_transfer_out_addr": "Please enter the transfer wallet address",
+  "iput_transfer_amount": "Please enter transferor's name",
+  "transfer_amount": "Recharge Amount",
+  "input_transfer_amount": "Please enter recharge amount",
+  "account": "Account",
+  "open_bank": "Bank",
+  "input_recharge_amount": "Please enter transfer account",
+  "rechate_address": "Recharge Address",
+  "transfer_address": "Recharge Address",
+  "input_transfer_addr": "Please enter recharge address",
+  "transfer_out_address": "Transfer Address",
+  "input_transfer_out_addr": "Please enter transfer wallet address",
   "game_log": {
-    "not_cpmpelete": "Not settled",
-    "cancel": "Canceled",
+    "not_cpmpelete": "Not Settled",
+    "cancel": "Cancelled",
     "complete": "Completed"
   },
   "register": {
-    "username": "username",
-    "inputUsername": "Please fill in the username",
-    "password": "password",
-    "inputPassword": "Please fill in your password",
+    "username": "Username",
+    "inputUsername": "Please enter username",
+    "password": "Password",
+    "inputPassword": "Please enter password",
     "confirmPassword": "Confirm Password",
-    "inputConfirmPassword": "Please fill in your password again",
-    "realName": "Real name",
-    "inputRealname": "Please fill in your real name",
-    "qkPwd": "Withdrawal password",
-    "inputQkpwd": "Please fill in your withdrawal password",
-    "phone": "telephone number",
-    "inputPhone": "Please fill in your phone number",
+    "inputConfirmPassword": "Please enter password again",
+    "realName": "Real Name",
+    "inputRealname": "Please enter real name",
+    "qkPwd": "Withdrawal Password",
+    "inputQkpwd": "Please enter withdrawal password",
+    "phone": "Phone Number",
+    "inputPhone": "Please enter phone number",
     "currency": "Currency Type",
-    "inputCurrency": "Please select a currency type",
-    "captcha": "Verification code",
-    "inputCaptcha": "Please fill in the verification code",
-    "inviteCode": "Invitation code",
-    "inputInviterCode": "Please fill in the invitation code",
+    "inputCurrency": "Please select currency type",
+    "captcha": "Verification Code",
+    "inputCaptcha": "Please enter verification code",
+    "inviteCode": "Invitation Code",
+    "inputInviterCode": "Please enter invitation code",
     "email": "Email"
   },
   "vip": {
-    "dqCK": "Current deposit",
-    "dqBet": "Current betting",
-    "amount": "Promotion gift",
+    "dqCK": "Current Deposit",
+    "dqBet": "Current Bet",
+    "amount": "Promotion Gift",
     "zhuanXiang": "Exclusive",
     "dayLJ": "Daily Gift",
     "weekLJ": "Weekly Gift",
-    "monthLJ": "Monthly gift",
-    "brithdayLJ": "Birthday gift",
-    "rightDetail": "VIP privilege details"
+    "monthLJ": "Monthly Gift",
+    "brithdayLJ": "Birthday Gift",
+    "rightDetail": "VIP Privilege Details"
   },
-  "add": "New",
-  "sweetWarning": "Kind tips",
+  "add": "Add",
+  "sweetWarning": "Warm Tips",
   "deposit": {
-    "detail1": "1. The banks listed above are banks supported by \"Online Payment\". Choose your payment bank.",
-    "detail2": "2. Fill in the amount you want to pay in the \"Disclaimer Amount\" column and click the \"Submit\" button.",
-    "detail3": "3. After the deposit is successful, you must reach twice the effective bet amount before you can withdraw money (anti-cash withdrawal and money laundering)."
+    "detail1": "1. The banks listed above are supported by \"Online Payment\". Choose your payment bank.",
+    "detail2": "2. Fill in the amount you want to pay in the \"Deposit Amount\" field and click the \"Submit\" button.",
+    "detail3": "3. After successful deposit, you must reach 1x valid bet amount before withdrawal (Anti-money laundering)."
   },
-  "youhuihuodong": "Discounts"
+  "youhuihuodong": "Promotions",
+  "systemAnnouncement": "System Announcement",
+  "customerService": "Customer Service",
+  "financeAddress": "Finance Address",
+  "clickToOpen": "Click to Open",
+  "hotline": "Hotline",
+  "rechargeRecord": "Recharge Records",
+  "rechargeAmount": "Recharge Amount",
+  "transferBankName": "Transfer Bank Name",
+  "inputTransferBankName": "Please enter transfer bank name",
+  "inputBankCardNumber": "Please enter bank card number",
+  "inputHuiwangAccount": "Please enter Huiwang account",
+  "inputUSDTAddress": "Please enter USDT wallet address",
+  "rechargeSubmitSuccess": "Recharge application submitted successfully",
+  "warmTips": "Warm Tips",
+  "rebateRecord": "Rebate Records",
+  "commissionRecord": "Commission Records",
+  "subordinateMembers": "Subordinate Members",
+  "teamInfo": "Team Information",
+  "agentRecord": "Agent Records",
+  "adjustProportion": "Adjust Proportion",
+  "addCredits": "Add Credits",
+  "memberAddCredits": "Member Add Credits",
+  "confirmTransfer": "Confirm Transfer",
+  "transferAmountTip1": "Transfer amount will be deducted from your balance",
+  "transferAmountTip2": "Transfer will be credited immediately and cannot be reversed",
+  "transferAmountTip3": "Please carefully verify member information and amount",
+  "setAsDefault": "Set as Default",
+  "confirmSetDefault": "Confirm to set this account as default?",
+  "alreadyDefault": "This account is already default",
+  "settingSuccess": "Setting successful",
+  "settingFailed": "Setting failed",
+  "nickname": "Nickname",
+  "inputNickname": "Please enter nickname",
+  "hotGames": "Hot Games",
+  "sportsEvents": "Sports Events",
+  "liveCasino": "Live Casino",
+  "electronicGames": "Electronic Games",
+  "cardGames": "Card Games",
+  "fishingGames": "Fishing Games",
+  "lotteryGames": "Lottery Games",
+  "edit": "Edit",
+  "delete": "Delete",
+  "save": "Save",
+  "cancel": "Cancel",
+  "refresh": "Refresh",
+  "search": "Search",
+  "operationFailed": "Operation failed",
+  "pleaseInput": "Please enter",
+  "pleaseSelect": "Please select",
+  "inputPlaceholder": "Please enter content",
+  "pending": "Pending",
+  "approved": "Approved",
+  "rejected": "Rejected",
+  "processing": "Processing",
+  "completed": "Completed",
+  "networkError": "Network request failed",
+  "tryAgainLater": "Please try again later",
+  "dataLoadFailed": "Data loading failed",
+  "parameterError": "Parameter error",
+  "confirmLogout": "Confirm logout?"
 }
