--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -101,7 +101,8 @@
     "welcomeTo": "欢迎来到",
     "levelRight": "等级特权",
     "pullMoney": "推广赚钱",
-    "loginRegister": "登录/注册"
+    "loginRegister": "登录/注册",
+    "passwordTooShort": "密码长度不能少于6位"
   },
   "loading": "正在加载中...",
   "submit": "提交",
@@ -226,9 +227,69 @@
   "add": "新增",
   "sweetWarning": "温馨提示",
   "deposit": {
-    "detail1": "1.上面所列银行为“在线支付”所支持的银行，选择您的支付银行。",
-    "detail2": "2.在 “存款金额” 栏目中填写您要支付的金额， 并点击“提交”按钮。",
+    "detail1": "1.上面所列银行为'在线支付'所支持的银行，选择您的支付银行。",
+    "detail2": "2.在 '存款金额' 栏目中填写您要支付的金额， 并点击'提交'按钮。",
     "detail3": "3.存款成功后，需达到一倍有效投注额方可提款（防套现、防洗钱）。"
   },
-  "youhuihuodong": "优惠活动"
+  "youhuihuodong": "优惠活动",
+  "systemAnnouncement": "系统公告",
+  "customerService": "客服地址",
+  "financeAddress": "财务地址",
+  "clickToOpen": "点击打开",
+  "hotline": "热线电话",
+  "rechargeRecord": "充值记录",
+  "rechargeAmount": "充值金额",
+  "transferBankName": "转账银行名称",
+  "inputTransferBankName": "请输入转账银行名称",
+  "inputBankCardNumber": "请输入银行卡号",
+  "inputHuiwangAccount": "请输入汇旺账号",
+  "inputUSDTAddress": "请输入USDT钱包地址",
+  "rechargeSubmitSuccess": "充值申请提交成功",
+  "warmTips": "温馨提示",
+  "rebateRecord": "返水记录",
+  "commissionRecord": "返佣记录",
+  "subordinateMembers": "下级会员",
+  "teamInfo": "团队信息",
+  "agentRecord": "代理记录",
+  "adjustProportion": "调整比例",
+  "addCredits": "上分",
+  "memberAddCredits": "会员上分",
+  "confirmTransfer": "确认转账",
+  "transferAmountTip1": "转账金额将从您的余额中扣除",
+  "transferAmountTip2": "转账后立即到账，无法撤回",
+  "transferAmountTip3": "请仔细核对会员信息和金额",
+  "setAsDefault": "设为默认账户",
+  "confirmSetDefault": "确定要将此账户设为默认账户吗？",
+  "alreadyDefault": "该账户已经是默认账户",
+  "settingSuccess": "设置成功",
+  "settingFailed": "设置失败",
+  "nickname": "昵称",
+  "inputNickname": "请输入昵称",
+  "hotGames": "热门游戏",
+  "sportsEvents": "体育赛事",
+  "liveCasino": "视讯直播",
+  "electronicGames": "电子游艺",
+  "cardGames": "棋牌游戏",
+  "fishingGames": "捕鱼游戏",
+  "lotteryGames": "彩票游戏",
+  "edit": "编辑",
+  "delete": "删除",
+  "save": "保存",
+  "cancel": "取消",
+  "refresh": "刷新",
+  "search": "搜索",
+  "operationFailed": "操作失败",
+  "pleaseInput": "请输入",
+  "pleaseSelect": "请选择",
+  "inputPlaceholder": "请输入内容",
+  "pending": "待审核",
+  "approved": "已通过",
+  "rejected": "已拒绝",
+  "processing": "处理中",
+  "completed": "已完成",
+  "networkError": "网络请求失败",
+  "tryAgainLater": "请稍后重试",
+  "dataLoadFailed": "数据加载失败",
+  "parameterError": "参数错误",
+  "confirmLogout": "确认退出登录？"
 }
