--- a/src/lang/zh-TW.json
+++ b/src/lang/zh-TW.json
@@ -1,4 +1,13 @@
 {
+  "main": {
+    "index": "首頁",
+    "gift": "優惠",
+    "kf": "客服",
+    "mine": "我的",
+    "collectionSuccess": "收藏成功",
+    "noLogin": "未登入",
+    "loginCheck": "登入後查看"
+  },
   "user": {
     "register": "註冊",
     "settings": "設定",
@@ -92,7 +101,8 @@
     "welcomeTo": "歡迎來到",
     "levelRight": "等級特權",
     "pullMoney": "推廣賺錢",
-    "loginRegister": "登錄/註冊"
+    "loginRegister": "登錄/註冊",
+    "passwordTooShort": "密碼長度不能少於6位"
   },
   "loading": "正在加載中...",
   "submit": "提交",
@@ -114,11 +124,6 @@
   "changeAuto": "切換至自動",
   "changeManual": "切換至手動",
   "confirm": "確認",
-  "main": {
-    "collectionSuccess": "收藏成功",
-    "noLogin": "未登入",
-    "loginCheck": "登入後查看"
-  },
   "dianzi": "電子遊戲",
   "zhenren": "真人遊戲",
   "tiyu": "體育遊戲",
@@ -222,9 +227,69 @@
   "add": "新增",
   "sweetWarning": "溫馨提示",
   "deposit": {
-    "detail1": "1.上面所列銀行為“在線支付”所支持的銀行，選擇您的支付銀行。",
-    "detail2": "2.在 “存款金額” 欄目中填寫您要支付的金額， 並點擊“提交”按鈕。",
+    "detail1": "1.上面所列銀行為'在線支付'所支持的銀行，選擇您的支付銀行。",
+    "detail2": "2.在 '存款金額' 欄目中填寫您要支付的金額， 並點擊'提交'按鈕。",
     "detail3": "3.存款成功後，需達到一倍有效投注額方可提款（防套現、防洗錢）。"
   },
-  "youhuihuodong": "優惠活動"
+  "youhuihuodong": "優惠活動",
+  "systemAnnouncement": "系統公告",
+  "customerService": "客服地址",
+  "financeAddress": "財務地址",
+  "clickToOpen": "點擊打開",
+  "hotline": "熱線電話",
+  "rechargeRecord": "充值記錄",
+  "rechargeAmount": "充值金額",
+  "transferBankName": "轉帳銀行名稱",
+  "inputTransferBankName": "請輸入轉帳銀行名稱",
+  "inputBankCardNumber": "請輸入銀行卡號",
+  "inputHuiwangAccount": "請輸入匯旺帳號",
+  "inputUSDTAddress": "請輸入USDT錢包地址",
+  "rechargeSubmitSuccess": "充值申請提交成功",
+  "warmTips": "溫馨提示",
+  "rebateRecord": "返水記錄",
+  "commissionRecord": "返佣記錄",
+  "subordinateMembers": "下級會員",
+  "teamInfo": "團隊資訊",
+  "agentRecord": "代理記錄",
+  "adjustProportion": "調整比例",
+  "addCredits": "上分",
+  "memberAddCredits": "會員上分",
+  "confirmTransfer": "確認轉帳",
+  "transferAmountTip1": "轉帳金額將從您的餘額中扣除",
+  "transferAmountTip2": "轉帳後立即到帳，無法撤回",
+  "transferAmountTip3": "請仔細核對會員資訊和金額",
+  "setAsDefault": "設為預設帳戶",
+  "confirmSetDefault": "確定要將此帳戶設為預設帳戶嗎？",
+  "alreadyDefault": "該帳戶已經是預設帳戶",
+  "settingSuccess": "設定成功",
+  "settingFailed": "設定失敗",
+  "nickname": "暱稱",
+  "inputNickname": "請輸入暱稱",
+  "hotGames": "熱門遊戲",
+  "sportsEvents": "體育賽事",
+  "liveCasino": "視訊直播",
+  "electronicGames": "電子遊藝",
+  "cardGames": "棋牌遊戲",
+  "fishingGames": "捕魚遊戲",
+  "lotteryGames": "彩票遊戲",
+  "edit": "編輯",
+  "delete": "刪除",
+  "save": "儲存",
+  "cancel": "取消",
+  "refresh": "重新整理",
+  "search": "搜尋",
+  "operationFailed": "操作失敗",
+  "pleaseInput": "請輸入",
+  "pleaseSelect": "請選擇",
+  "inputPlaceholder": "請輸入內容",
+  "pending": "待審核",
+  "approved": "已通過",
+  "rejected": "已拒絕",
+  "processing": "處理中",
+  "completed": "已完成",
+  "networkError": "網路請求失敗",
+  "tryAgainLater": "請稍後重試",
+  "dataLoadFailed": "資料載入失敗",
+  "parameterError": "參數錯誤",
+  "confirmLogout": "確認登出？"
 }
