--- a/src/lang/ko-KR.json
+++ b/src/lang/ko-KR.json
@@ -1,234 +1,295 @@
 {
   "main": {
-    "index": "첫 페이지",
-    "gift": "할인",
-    "kf": "고객서비스센",
-    "mine": "나",
-    "collectionSuccess": "수집성공",
-    "noLogin": "미등록",
-    "loginCheck": "등록후검색"
+    "index": "홈",
+    "gift": "프로모션",
+    "kf": "고객센터",
+    "mine": "마이페이지",
+    "collectionSuccess": "즐겨찾기 성공",
+    "noLogin": "로그인되지 않음",
+    "loginCheck": "로그인 후 확인"
   },
   "user": {
-    "register": "등록",
+    "register": "회원가입",
     "settings": "설정",
-    "conactUs": "연락주세요"
+    "conactUs": "문의하기"
   },
-  "noData": "데이터없음",
-  "all": "전부",
-  "activity_detail": "이벤트상황",
+  "noData": "데이터 없음",
+  "all": "전체",
+  "activity_detail": "이벤트 상세",
   "mine": {
-    "safeSetting": "안전설정",
-    "aboutUs": "저희에 관해",
+    "safeSetting": "보안 설정",
+    "aboutUs": "회사 소개",
     "logout": "로그아웃",
-    "loginPwd": "등록비밀번호",
-    "withdrawPwd": "출금비밀번호",
+    "loginPwd": "로그인 비밀번호",
+    "withdrawPwd": "출금 비밀번호",
     "deposit": "입금",
     "withdraw": "출금",
-    "vip": "vip특허",
-    "quickDeposit": "쾌속충전",
-    "sunmitWithdraw": "출금신청",
-    "bankManage": "은행카드관리",
+    "vip": "VIP 특권",
+    "quickDeposit": "빠른 충전",
+    "sunmitWithdraw": "출금 신청",
+    "bankManage": "은행 카드 관리",
     "edit": "수정",
-    "addBind": "바이딩증가",
-    "modifyLoginPwd": "등록비밀번호수정",
-    "settingWithdrawalPwd": "출금비밀번호설정",
-    "modifyWithdrawalPwd": "출금비밀번호수정",
-    "currPwd": "현재비밀번호",
-    "inputCurrPwd": "전 비밀번호 입력하세요",
+    "addBind": "바인딩 추가",
+    "modifyLoginPwd": "로그인 비밀번호 변경",
+    "settingWithdrawalPwd": "출금 비밀번호 설정",
+    "modifyWithdrawalPwd": "출금 비밀번호 변경",
+    "currPwd": "현재 비밀번호",
+    "inputCurrPwd": "이전 비밀번호를 입력하세요",
     "newPwd": "새 비밀번호",
-    "inputNewPwd": "새 비밀번호 입력하세요",
+    "inputNewPwd": "새 비밀번호를 입력하세요",
     "confrmNewPwd": "새 비밀번호 확인",
-    "newPwdDiff": "새 비밀번호 입력 불일치 합니다",
-    "successAndLoginAgain": "수정 성공,다시 등록하세요",
+    "newPwdDiff": "새 비밀번호가 일치하지 않습니다",
+    "successAndLoginAgain": "수정 성공, 다시 로그인하세요",
     "qknewPwd": "출금 비밀번호",
     "inputPlz": "입력하세요",
-    "inputPlzAgain": "다시 한번 입력하세요",
-    "inputTisDiff": "두번 입력 불일치 합니다",
-    "confrmqkPwd": "출금 비밀번호 확인 하세요",
-    "name": "사용자 이름",
-    "canDrawMoney": "출금 가능한 금액",
-    "shouChannel": "수취인 주소",
-    "cardName": "카드 소지자 이름",
+    "inputPlzAgain": "다시 입력하세요",
+    "inputTisDiff": "두 입력이 일치하지 않습니다",
+    "confrmqkPwd": "출금 비밀번호 확인",
+    "name": "사용자명",
+    "canDrawMoney": "출금 가능 금액",
+    "shouChannel": "수취 주소",
+    "cardName": "카드 소유자 이름",
     "cardAccount": "은행 계좌",
-    "drawMoney": "인출금액",
-    "drawingPwd": "인출비밀번호",
-    "allMoney": "전부",
-    "notSetDrawingPwd": "츌금 비밀번호를 설정하지 않으셨습니다,설정후 다시 시도 하십시요",
-    "bindDrawingAddress": "우선먼저 은행카드를 바이딩 해주십시요",
-    "vipDetial": "프로모션규칙",
-    "vipLiJin": "프로모션선물금",
-    "bet": "배팅",
-    "allDaBiao": "전부목적달성",
-    "moneyLog": "거래내역",
-    "operateType": "변동유형",
-    "walletType": "금액유형",
-    "today": "현재",
+    "drawMoney": "출금 금액",
+    "drawingPwd": "출금 비밀번호",
+    "allMoney": "전체",
+    "notSetDrawingPwd": "출금 비밀번호를 설정하지 않았습니다. 먼저 설정 후 진행하세요",
+    "bindDrawingAddress": "먼저 은행 카드를 바인딩하세요",
+    "vipDetial": "승급 규칙",
+    "vipLiJin": "승급 보너스",
+    "bet": "베팅",
+    "allDaBiao": "모든 기준 달성",
+    "moneyLog": "거래 기록",
+    "operateType": "변동 유형",
+    "walletType": "금액 유형",
+    "today": "오늘",
     "yestoday": "어제",
-    "week": "일주일내",
-    "month": "일개월내",
-    "all": "전부",
-    "money_rebate": "캐시백지갑",
-    "money_fanyong": "캐시백지갑",
-    "money": "중심지갑",
-    "moneyLogAmount": "매출금액",
-    "validAmount": "유효금액",
-    "gameLog": "게임기록",
-    "totalBetAmount": "총배팅금액",
-    "totalWinLoss": "총승패",
-    "apiType": "인터페이스유형",
-    "gameType": "게임유형",
-    "tuiguanG": "홍보및수익창출",
-    "baseInfo": "기본정보",
-    "transferAmount": "상한가전환",
+    "week": "일주일 내",
+    "month": "한 달 내",
+    "all": "전체",
+    "money_rebate": "리베이트 지갑",
+    "money_fanyong": "커미션 지갑",
+    "money": "메인 지갑",
+    "moneyLogAmount": "거래 금액",
+    "validAmount": "유효 금액",
+    "gameLog": "게임 기록",
+    "totalBetAmount": "총 베팅 금액",
+    "totalWinLoss": "총 승/패",
+    "apiType": "인터페이스 유형",
+    "gameType": "게임 유형",
+    "tuiguanG": "추천 수익",
+    "baseInfo": "기본 정보",
+    "transferAmount": "한도 전환",
     "totalBalance": "계좌 잔액",
-    "inputTransferMoney": "이체하실 금액을 입력하십시요",
+    "inputTransferMoney": "이체 금액을 입력하세요",
     "money2": "금액",
-    "myCollection": "나의 컬렉션",
-    "myNotices": "나의 정보",
+    "myCollection": "내 즐겨찾기",
+    "myNotices": "내 메시지",
     "balance": "잔액",
-    "centerWalletBalance": "중심지갑잔액",
-    "toGame": "게임 들어가기",
-    "loveIsHere": "여기에 좋아하는것들 다 있습니다",
-    "mxdaikuan": "무이자대금",
-    "yuEBao": "위쳇페이",
-    "bankCard": "은행카드",
-    "accountSafe": "계좌와안전",
-    "safest": "계좌정보완화,안전강화",
-    "persionalInfo": "개인정보",
-    "normalFunc": "상용기능",
-    "centerWallet": "중심지갑",
-    "fsWallet": "캐시백지갑",
-    "welcomeTo": "어서오세요",
-    "levelRight": "등급특권",
-    "pullMoney": "홍보및수익창출",
-    "loginRegister": "로그인/등록"
+    "centerWalletBalance": "메인 지갑 잔액",
+    "toGame": "게임 입장",
+    "loveIsHere": "좋아하는 모든 것이 여기에",
+    "mxdaikuan": "무이자 대출",
+    "yuEBao": "위어바오",
+    "bankCard": "은행 카드",
+    "accountSafe": "계정 및 보안",
+    "safest": "계정 정보 완성으로 더 안전하게",
+    "persionalInfo": "개인 정보",
+    "normalFunc": "자주 쓰는 기능",
+    "centerWallet": "메인 지갑",
+    "fsWallet": "리베이트 지갑",
+    "welcomeTo": "환영합니다",
+    "levelRight": "등급 특권",
+    "pullMoney": "추천 수익",
+    "loginRegister": "로그인/회원가입",
+    "passwordTooShort": "비밀번호는 최소 6자 이상이어야 합니다"
   },
-  "loading": "로딩중...",
+  "loading": "로딩 중...",
   "submit": "제출",
-  "inputNewPwdAgain": "새비밀번호를다시 입력하세요",
-  "success": "작업성공",
-  "noMore": "더 이상은 없습니다",
+  "inputNewPwdAgain": "새 비밀번호를 다시 입력하세요",
+  "success": "작업 성공",
+  "noMore": "더 이상 없음",
   "moneyLog": {
-    "detail": "기록상황",
-    "tradeMoney": "게래금액",
-    "beforeMoney": "이전전금액",
-    "afterMoney": "이전후금액",
-    "walletType": "지갑유형",
-    "transferType": "이체유형",
-    "desc": "작업설명",
-    "tradeDate": "거래시간",
-    "status": "게임상황"
+    "detail": "기록 상세",
+    "tradeMoney": "거래 금액",
+    "beforeMoney": "이체 전 잔액",
+    "afterMoney": "이체 후 잔액",
+    "walletType": "지갑 유형",
+    "transferType": "이체 유형",
+    "desc": "작업 설명",
+    "tradeDate": "거래 시간",
+    "status": "게임 상태"
   },
   "fillIn": "입력",
   "changeAuto": "자동으로 전환",
   "changeManual": "수동으로 전환",
   "confirm": "확인",
-  "dianzi": "전자게임",
-  "zhenren": "리얼게임",
-  "tiyu": "스포츠게임",
-  "lottery": "복권게임",
-  "qipai": "보드게임",
-  "fishGame": "고기잡이게임",
+  "dianzi": "전자 게임",
+  "zhenren": "라이브 게임",
+  "tiyu": "스포츠 게임",
+  "lottery": "복권 게임",
+  "qipai": "카드 게임",
+  "fishGame": "낚시 게임",
   "noRecord": "데이터 없음",
   "unread": "읽지 않음",
   "readed": "읽음",
-  "transferIn": "이전",
-  "inputTransferInAmount": "이전금액을 입력하세요",
-  "todayDoNotShow": "오늘은 더이상 보이지 않습니다",
-  "enterGame": "게입 들어가기",
-  "transferInMoneyMustThan0": "이전 금액 0원 이상이여아 합니다",
-  "refreshBalanceFailed": "잔액 새로 고침에 실패했습니다",
-  "depositFailed": "전환 금액 실패 입니다",
-  "moneyTransferMoneyNot": "지갑과지갑의 상호전환은 않됩니다",
-  "daliySign": "매일 로그인",
+  "transferIn": "이체 입금",
+  "inputTransferInAmount": "이체 금액을 입력하세요",
+  "todayDoNotShow": "오늘 다시 표시 안 함",
+  "enterGame": "게임 입장",
+  "transferInMoneyMustThan0": "이체 금액은 0보다 커야 합니다",
+  "refreshBalanceFailed": "잔액 새로고침 실패",
+  "depositFailed": "한도 전환 실패",
+  "moneyTransferMoneyNot": "지갑 간 상호 전환 불가",
+  "daliySign": "매일 출석",
   "support": {
-    "welcome": "서비스센타에 오신것을 환영합니다",
-    "mainCustom": "메인서비스센타",
-    "agentCoustom": "서비스센타대표",
-    "serviceTop": "항상대기 서비스 ,마음으로 모시겠습니다"
+    "welcome": "고객센터에 오신 것을 환영합니다",
+    "mainCustom": "메인 고객센터",
+    "agentCoustom": "고객 서비스 담당자",
+    "serviceTop": "24시간 전담 서비스"
   },
   "selected": "선택하세요",
   "game": {
-    "myCollection": "나의 컬렉션"
+    "myCollection": "내 즐겨찾기"
   },
   "login": {
-    "openFixed": "최고 체험을 열어주세요",
-    "inputAccount": "계좌번호룰 입력하세요",
-    "inputRight": "정확한 내용을 입력하세요",
+    "openFixed": "최고의 경험 시작",
+    "inputAccount": "계정을 입력하세요",
+    "inputRight": "올바른 내용을 입력하세요",
     "inputPwd": "비밀번호를 입력하세요",
     "login": "로그인",
     "forgetPwd": "비밀번호를 잊으셨나요?",
-    "register": "등록",
-    "resetpwdForCustomer": "서비스센타에서 비밀번호를 다시 설정 하십시요",
-    "loginSuccess": "로그인성공"
+    "register": "회원가입",
+    "resetpwdForCustomer": "고객센터에 문의하여 비밀번호를 재설정하세요",
+    "loginSuccess": "로그인 성공"
   },
-  "rememberMe": "비밀번호를 기억하세요",
-  "weiHuZhong": "게임 점검중입니다",
-  "pay_type": "지불방식",
-  "online_pay": "온라인지불",
+  "rememberMe": "비밀번호 기억",
+  "weiHuZhong": "플랫폼 점검 중...",
+  "pay_type": "결제 방식",
+  "online_pay": "온라인 결제",
   "company_pay": "회사 입금",
-  "pay_channel": "지불체널",
-  "recharge_qrcode": "수금QR코드",
-  "recharge_account": "수금계좌",
+  "pay_channel": "결제 채널",
+  "recharge_qrcode": "결제 QR 코드",
+  "recharge_account": "결제 계좌",
   "copy": "복사",
-  "recharge_username": "수금자 이름",
-  "upload_cert": "이체 바우처 업로드",
-  "transfer_account": "이체계좌",
-  "transfer_user": "이체인",
-  "iput_transfer_amount": "이체인 이름을 입력하세요",
-  "transfer_amount": "충전금액",
+  "recharge_username": "수취인 이름",
+  "upload_cert": "이체 증명서 업로드",
+  "transfer_account": "이체 계좌",
+  "transfer_user": "송금인",
+  "iput_transfer_amount": "송금인 이름을 입력하세요",
+  "transfer_amount": "충전 금액",
   "input_transfer_amount": "충전 금액을 입력하세요",
-  "account": "계좌번호",
-  "open_bank": "개설은행",
-  "input_recharge_amount": "이체계좌를 입력하세요",
-  "rechate_address": "충전주소",
-  "transfer_address": "충전주소소",
-  "input_transfer_addr": "충전주소를 입력하세요",
-  "transfer_out_address": "이전주소",
-  "input_transfer_out_addr": "이전지갑 주소를 입력하십시요",
+  "account": "계좌",
+  "open_bank": "개설 은행",
+  "input_recharge_amount": "이체 계좌를 입력하세요",
+  "rechate_address": "충전 주소",
+  "transfer_address": "충전 주소",
+  "input_transfer_addr": "충전 주소를 입력하세요",
+  "transfer_out_address": "송금 주소",
+  "input_transfer_out_addr": "송금 지갑 주소를 입력하세요",
   "game_log": {
     "not_cpmpelete": "미정산",
-    "cancel": "취소되였습니다",
-    "complete": "완성 되였습니다"
+    "cancel": "취소됨",
+    "complete": "완료됨"
   },
   "register": {
-    "username": "사용자 이름",
-    "inputUsername": "사용자 이름을 입력하십시요",
+    "username": "사용자명",
+    "inputUsername": "사용자명을 입력하세요",
     "password": "비밀번호",
     "inputPassword": "비밀번호를 입력하세요",
-    "confirmPassword": "비밀번호 확인을 눌러 주세요",
-    "inputConfirmPassword": "비밀번호를 다시한번 입력 하십시요",
-    "realName": "실명 (이름)",
-    "inputRealname": "실명(이름)을 입력하십시요",
+    "confirmPassword": "비밀번호 확인",
+    "inputConfirmPassword": "비밀번호를 다시 입력하세요",
+    "realName": "실명",
+    "inputRealname": "실명을 입력하세요",
     "qkPwd": "출금 비밀번호",
-    "inputQkpwd": "출금 비밀번호를 입력하십시요",
+    "inputQkpwd": "출금 비밀번호를 입력하세요",
     "phone": "전화번호",
-    "inputPhone": "전화번호를 입력하십시요",
-    "currency": "화페종류",
-    "inputCurrency": "화페종류를 입력하십시요",
-    "captcha": "인증코드",
-    "inputCaptcha": "인증코드를 입력하십시요",
-    "inviteCode": "초대코드",
-    "inputInviterCode": "토대코드를 입력하십시요",
+    "inputPhone": "전화번호를 입력하세요",
+    "currency": "통화 유형",
+    "inputCurrency": "통화 유형을 선택하세요",
+    "captcha": "인증 코드",
+    "inputCaptcha": "인증 코드를 입력하세요",
+    "inviteCode": "초대 코드",
+    "inputInviterCode": "초대 코드를 입력하세요",
     "email": "이메일"
   },
   "vip": {
     "dqCK": "현재 예금",
     "dqBet": "현재 베팅",
-    "amount": "프로모션 선물",
-    "zhuanXiang": "독점적인",
-    "dayLJ": "매일 선물",
-    "weekLJ": "주간 선물",
-    "monthLJ": "월간 선물",
-    "brithdayLJ": "생일 선물",
-    "rightDetail": "VIP 권한 세부 사항"
+    "amount": "승급 보너스",
+    "zhuanXiang": "전용",
+    "dayLJ": "일일 보너스",
+    "weekLJ": "주간 보너스",
+    "monthLJ": "월간 보너스",
+    "brithdayLJ": "생일 보너스",
+    "rightDetail": "VIP 특권 상세"
   },
-  "add": "새로운",
-  "sweetWarning": "친절한 팁",
+  "add": "추가",
+  "sweetWarning": "안내",
   "deposit": {
-    "detail1": "1. 위에 나열된 은행은 \"온라인 결제\"로 지원되는 은행입니다. 지불 은행을 선택하십시오.",
-    "detail2": "2. \"면책 금액\"열에서 지불 할 금액을 채우고 \"제출\"버튼을 클릭하십시오.",
-    "detail3": "3. 입금이 성공한 후에는 돈을 인출하기 전에 유효 베팅 금액의 두 배에 도달해야합니다 (캐시 방지 금액 및 자금 세탁)."
+    "detail1": "1. 위 은행들은 \"온라인 결제\"를 지원하는 은행입니다. 결제 은행을 선택하세요.",
+    "detail2": "2. \"입금 금액\" 란에 결제할 금액을 입력하고 \"제출\" 버튼을 클릭하세요.",
+    "detail3": "3. 입금 성공 후 1배 유효 베팅액에 도달해야 출금 가능합니다(자금세탁 방지)."
   },
-  "youhuihuodong": "할인"
+  "youhuihuodong": "프로모션",
+  "systemAnnouncement": "시스템 공지",
+  "customerService": "고객 서비스",
+  "financeAddress": "재무 주소",
+  "clickToOpen": "클릭하여 열기",
+  "hotline": "핫라인",
+  "rechargeRecord": "충전 기록",
+  "rechargeAmount": "충전 금액",
+  "transferBankName": "이체 은행명",
+  "inputTransferBankName": "이체 은행명을 입력하세요",
+  "inputBankCardNumber": "은행 카드 번호를 입력하세요",
+  "inputHuiwangAccount": "후이왕 계좌를 입력하세요",
+  "inputUSDTAddress": "USDT 지갑 주소를 입력하세요",
+  "rechargeSubmitSuccess": "충전 신청이 성공적으로 제출되었습니다",
+  "warmTips": "안내",
+  "rebateRecord": "리베이트 기록",
+  "commissionRecord": "커미션 기록",
+  "subordinateMembers": "하위 회원",
+  "teamInfo": "팀 정보",
+  "agentRecord": "에이전트 기록",
+  "adjustProportion": "비율 조정",
+  "addCredits": "크레딧 추가",
+  "memberAddCredits": "회원 크레딧 추가",
+  "confirmTransfer": "이체 확인",
+  "transferAmountTip1": "이체 금액은 잔액에서 차감됩니다",
+  "transferAmountTip2": "이체는 즉시 입금되며 취소할 수 없습니다",
+  "transferAmountTip3": "회원 정보와 금액을 신중히 확인하세요",
+  "setAsDefault": "기본값으로 설정",
+  "confirmSetDefault": "이 계정을 기본값으로 설정하시겠습니까?",
+  "alreadyDefault": "이 계정은 이미 기본값입니다",
+  "settingSuccess": "설정 성공",
+  "settingFailed": "설정 실패",
+  "nickname": "닉네임",
+  "inputNickname": "닉네임을 입력하세요",
+  "hotGames": "인기 게임",
+  "sportsEvents": "스포츠 이벤트",
+  "liveCasino": "라이브 카지노",
+  "electronicGames": "전자 게임",
+  "cardGames": "카드 게임",
+  "fishingGames": "낚시 게임",
+  "lotteryGames": "복권 게임",
+  "edit": "편집",
+  "delete": "삭제",
+  "save": "저장",
+  "cancel": "취소",
+  "refresh": "새로고침",
+  "search": "검색",
+  "operationFailed": "작업 실패",
+  "pleaseInput": "입력하세요",
+  "pleaseSelect": "선택하세요",
+  "inputPlaceholder": "내용을 입력하세요",
+  "pending": "대기 중",
+  "approved": "승인됨",
+  "rejected": "거부됨",
+  "processing": "처리 중",
+  "completed": "완료됨",
+  "networkError": "네트워크 요청 실패",
+  "tryAgainLater": "나중에 다시 시도하세요",
+  "dataLoadFailed": "데이터 로드 실패",
+  "parameterError": "매개변수 오류",
+  "confirmLogout": "로그아웃하시겠습니까?"
 }
