--- a/src/lang/th_TH.json
+++ b/src/lang/th_TH.json
@@ -1,15 +1,15 @@
 {
   "main": {
     "index": "หน้าแรก",
-    "gift": "การลดราคา",
-    "kf": "การบริการลูกค้า",
+    "gift": "โปรโมชั่น",
+    "kf": "ฝ่ายบริการ",
     "mine": "ของฉัน",
-    "collectionSuccess": "รวบรวมสำเร็จ",
-    "noLogin": "ไม่ได้เข้าสู่ระบบ",
+    "collectionSuccess": "เก็บรายการโปรดสำเร็จ",
+    "noLogin": "ยังไม่ได้เข้าสู่ระบบ",
     "loginCheck": "เข้าสู่ระบบเพื่อดู"
   },
   "user": {
-    "register": "ลงทะเบียน",
+    "register": "สมัครสมาชิก",
     "settings": "ตั้งค่า",
     "conactUs": "ติดต่อเรา"
   },
@@ -21,214 +21,275 @@
     "aboutUs": "เกี่ยวกับเรา",
     "logout": "ออกจากระบบ",
     "loginPwd": "รหัสผ่านเข้าสู่ระบบ",
-    "withdrawPwd": "ถอนรหัสผ่าน",
-    "deposit": "เงินฝาก",
+    "withdrawPwd": "รหัสผ่านถอนเงิน",
+    "deposit": "ฝากเงิน",
     "withdraw": "ถอนเงิน",
-    "vip": "สิทธิพิเศษระดับวีไอพี",
-    "quickDeposit": "เติมเงินด่วน",
-    "sunmitWithdraw": "สมัครเพื่อถอนเงิน",
-    "bankManage": "การจัดการบัตรธนาคาร",
-    "edit": "ปรับปรุงใหม่",
-    "addBind": "เพิ่มการผูกมัด",
+    "vip": "สิทธิพิเศษ VIP",
+    "quickDeposit": "ฝากเงินด่วน",
+    "sunmitWithdraw": "ขอถอนเงิน",
+    "bankManage": "จัดการบัตรธนาคาร",
+    "edit": "แก้ไข",
+    "addBind": "เพิ่มการผูก",
     "modifyLoginPwd": "เปลี่ยนรหัสผ่านเข้าสู่ระบบ",
-    "settingWithdrawalPwd": "ตั้งรหัสผ่านการถอนเงิน",
-    "modifyWithdrawalPwd": "เปลี่ยนรหัสผ่านการถอน",
+    "settingWithdrawalPwd": "ตั้งรหัสผ่านถอนเงิน",
+    "modifyWithdrawalPwd": "เปลี่ยนรหัสผ่านถอนเงิน",
     "currPwd": "รหัสผ่านปัจจุบัน",
     "inputCurrPwd": "กรุณากรอกรหัสผ่านเก่า",
     "newPwd": "รหัสผ่านใหม่",
     "inputNewPwd": "กรุณากรอกรหัสผ่านใหม่",
     "confrmNewPwd": "ยืนยันรหัสผ่านใหม่",
-    "newPwdDiff": "รหัสผ่านใหม่ที่ป้อนสองครั้งไม่สอดคล้องกัน",
-    "successAndLoginAgain": "แก้ไขสำเร็จแล้ว กรุณาเข้าสู่ระบบอีกครั้ง",
-    "qknewPwd": "การถอนรหัสผ่าน",
-    "inputPlz": "กรุณาเข้า",
-    "inputPlzAgain": "กรุณากรอกใหม่อีกครั้ง",
-    "inputTisDiff": "อินพุตสองตัวไม่สอดคล้องกัน",
-    "confrmqkPwd": "ยืนยันรหัสผ่านการถอน",
+    "newPwdDiff": "รหัสผ่านใหม่ที่กรอกสองครั้งไม่ตรงกัน",
+    "successAndLoginAgain": "แก้ไขสำเร็จ กรุณาเข้าสู่ระบบใหม่",
+    "qknewPwd": "รหัสผ่านถอนเงิน",
+    "inputPlz": "กรุณากรอก",
+    "inputPlzAgain": "กรุณากรอกอีกครั้ง",
+    "inputTisDiff": "ข้อมูลที่กรอกสองครั้งไม่ตรงกัน",
+    "confrmqkPwd": "ยืนยันรหัสผ่านถอนเงิน",
     "name": "ชื่อผู้ใช้",
-    "canDrawMoney": "จำนวนเงินที่ถอน",
-    "shouChannel": "ที่อยู่การชำระเงิน",
+    "canDrawMoney": "จำนวนเงินที่ถอนได้",
+    "shouChannel": "ที่อยู่รับเงิน",
     "cardName": "ชื่อผู้ถือบัตร",
     "cardAccount": "บัญชีธนาคาร",
     "drawMoney": "จำนวนเงินที่ถอน",
-    "drawingPwd": "การถอนรหัสผ่าน",
+    "drawingPwd": "รหัสผ่านถอนเงิน",
     "allMoney": "ทั้งหมด",
-    "notSetDrawingPwd": "คุณยังไม่ได้ตั้งรหัสผ่านการถอน โปรดตั้งรหัสผ่านการถอนก่อนดำเนินการต่อ",
-    "bindDrawingAddress": "กรุณาผูกบัตรธนาคารของคุณก่อน",
-    "vipDetial": "กฎโปรโมชั่น",
-    "vipLiJin": "โบนัสโปรโมชั่น",
+    "notSetDrawingPwd": "คุณยังไม่ได้ตั้งรหัสผ่านถอนเงิน กรุณาตั้งรหัสผ่านถอนเงินก่อนดำเนินการ",
+    "bindDrawingAddress": "กรุณาผูกบัตรธนาคารก่อน",
+    "vipDetial": "กฎการเลื่อนระดับ",
+    "vipLiJin": "โบนัสเลื่อนระดับ",
     "bet": "เดิมพัน",
-    "allDaBiao": "เป็นไปตามมาตรฐานทั้งหมด",
+    "allDaBiao": "ผ่านเกณฑ์ทั้งหมด",
     "moneyLog": "ประวัติการทำธุรกรรม",
-    "operateType": "เปลี่ยนประเภท",
+    "operateType": "ประเภทการเปลี่ยนแปลง",
     "walletType": "ประเภทจำนวนเงิน",
-    "today": "วันนั้น",
+    "today": "วันนี้",
     "yestoday": "เมื่อวาน",
     "week": "ภายในหนึ่งสัปดาห์",
     "month": "ภายในหนึ่งเดือน",
     "all": "ทั้งหมด",
-    "money_rebate": "ส่วนลดกระเป๋าสตางค์",
-    "money_fanyong": "ส่วนลดกระเป๋าสตางค์",
-    "money": "กระเป๋าเงินกลาง",
-    "moneyLogAmount": "จำนวนการหมุนเวียน",
-    "validAmount": "ปริมาณที่มีประสิทธิภาพ",
+    "money_rebate": "กระเป๋าเงินคืน",
+    "money_fanyong": "กระเป๋าค่าคอมมิชชั่น",
+    "money": "กระเป๋าหลัก",
+    "moneyLogAmount": "จำนวนเงินหมุนเวียน",
+    "validAmount": "จำนวนเงินที่ใช้ได้",
     "gameLog": "บันทึกเกม",
-    "totalBetAmount": "จำนวนเงินเดิมพันทั้งหมด",
-    "totalWinLoss": "ชนะหรือแพ้ทั้งหมด",
+    "totalBetAmount": "ยอดเดิมพันทั้งหมด",
+    "totalWinLoss": "ยอดชนะ/แพ้ทั้งหมด",
     "apiType": "ประเภทอินเทอร์เฟซ",
     "gameType": "ประเภทเกม",
-    "tuiguanG": "ส่งเสริมและสร้างรายได้",
+    "tuiguanG": "โปรโมทสร้างรายได้",
     "baseInfo": "ข้อมูลพื้นฐาน",
-    "transferAmount": "การแปลงเครดิต",
+    "transferAmount": "แปลงเครดิต",
     "totalBalance": "ยอดเงินในบัญชี",
     "inputTransferMoney": "กรุณากรอกจำนวนเงินที่โอน",
-    "money2": "จำนวน",
+    "money2": "จำนวนเงิน",
     "myCollection": "คอลเลกชันของฉัน",
     "myNotices": "ข้อความของฉัน",
-    "balance": "สมดุล",
-    "centerWalletBalance": "ยอดคงเหลือกระเป๋าเงินกลาง",
+    "balance": "ยอดคงเหลือ",
+    "centerWalletBalance": "ยอดคงเหลือกระเป๋าหลัก",
     "toGame": "เข้าเกม",
     "loveIsHere": "ทุกสิ่งที่คุณรักอยู่ที่นี่",
-    "mxdaikuan": "ยืมแบบไม่มีดอกเบี้ย",
+    "mxdaikuan": "กู้ยืมไม่มีดอกเบี้ย",
     "yuEBao": "ยูอีเปา",
     "bankCard": "บัตรธนาคาร",
     "accountSafe": "บัญชีและความปลอดภัย",
-    "safest": "ปรับปรุงข้อมูลบัญชีและปลอดภัยยิ่งขึ้น",
-    "persionalInfo": "ข้อมูลส่วนบุคคล",
-    "normalFunc": "ฟังก์ชั่นที่ใช้กันทั่วไป",
-    "centerWallet": "กระเป๋าเงินกลาง",
-    "fsWallet": "กระเป๋าเงินปลอม",
+    "safest": "ปรับปรุงข้อมูลบัญชีให้ปลอดภัยยิ่งขึ้น",
+    "persionalInfo": "ข้อมูลส่วนตัว",
+    "normalFunc": "ฟังก์ชั่นที่ใช้บ่อย",
+    "centerWallet": "กระเป๋าหลัก",
+    "fsWallet": "กระเป๋าเงินคืน",
     "welcomeTo": "ยินดีต้อนรับสู่",
-    "levelRight": "สิทธิพิเศษของชั้นเรียน",
-    "pullMoney": "ส่งเสริมและสร้างรายได้",
-    "loginRegister": "เข้าสู่ระบบ/ลงทะเบียน"
+    "levelRight": "สิทธิพิเศษระดับ",
+    "pullMoney": "โปรโมทสร้างรายได้",
+    "loginRegister": "เข้าสู่ระบบ/สมัครสมาชิก",
+    "passwordTooShort": "รหัสผ่านต้องมีอย่างน้อย 6 ตัวอักษร"
   },
   "loading": "กำลังโหลด...",
   "submit": "ส่ง",
   "inputNewPwdAgain": "กรุณากรอกรหัสผ่านใหม่อีกครั้ง",
-  "success": "การดำเนินงานประสบความสำเร็จ",
+  "success": "ดำเนินการสำเร็จ",
   "noMore": "ไม่มีอีกแล้ว",
   "moneyLog": {
-    "detail": "บันทึกรายละเอียด",
-    "tradeMoney": "จำนวนธุรกรรม",
+    "detail": "รายละเอียดบันทึก",
+    "tradeMoney": "จำนวนเงินธุรกรรม",
     "beforeMoney": "ยอดคงเหลือก่อนโอน",
     "afterMoney": "ยอดคงเหลือหลังโอน",
-    "walletType": "ประเภทกระเป๋าสตางค์",
+    "walletType": "ประเภทกระเป๋าเงิน",
     "transferType": "ประเภทการโอน",
-    "desc": "คำอธิบายการดำเนินงาน",
-    "tradeDate": "ชั่วโมงการซื้อขาย",
+    "desc": "คำอธิบายการดำเนินการ",
+    "tradeDate": "เวลาทำธุรกรรม",
     "status": "สถานะเกม"
   },
   "fillIn": "กรอก",
   "changeAuto": "เปลี่ยนเป็นอัตโนมัติ",
-  "changeManual": "เปลี่ยนไปใช้แบบแมนนวล",
+  "changeManual": "เปลี่ยนเป็นแบบแมนนวล",
   "confirm": "ยืนยัน",
-  "dianzi": "วิดีโอเกม",
+  "dianzi": "เกมอิเล็กทรอนิกส์",
   "zhenren": "เกมสด",
   "tiyu": "เกมกีฬา",
-  "lottery": "เกมลอตเตอรี",
-  "qipai": "เกมกระดาน",
+  "lottery": "เกมลอตเตอรี่",
+  "qipai": "เกมไพ่",
   "fishGame": "เกมตกปลา",
   "noRecord": "ยังไม่มีข้อมูล",
   "unread": "ยังไม่ได้อ่าน",
-  "readed": "อ่าน",
+  "readed": "อ่านแล้ว",
   "transferIn": "โอนเข้า",
-  "inputTransferInAmount": "กรุณากรอกจำนวนเงินที่โอน",
-  "todayDoNotShow": "วันนี้อย่าแสดงอีกนะ",
+  "inputTransferInAmount": "กรุณากรอกจำนวนเงินที่โอนเข้า",
+  "todayDoNotShow": "วันนี้ไม่ต้องแสดงอีก",
   "enterGame": "เข้าเกม",
-  "transferInMoneyMustThan0": "จำนวนเงินโอนต้องมากกว่า 0",
-  "refreshBalanceFailed": "รีเฟรชยอดคงเหลือไม่สำเร็จ",
-  "depositFailed": "ไม่สามารถแปลงเครดิตได้",
-  "moneyTransferMoneyNot": "กระเป๋าเงินไม่สามารถแปลงให้กันและกันได้",
-  "daliySign": "เช็คอินทุกวัน",
+  "transferInMoneyMustThan0": "จำนวนเงินที่โอนต้องมากกว่า 0",
+  "refreshBalanceFailed": "รีเฟรชยอดคงเหลือล้มเหลว",
+  "depositFailed": "แปลงเครดิตล้มเหลว",
+  "moneyTransferMoneyNot": "กระเป๋าเงินไม่สามารถโอนระหว่างกันได้",
+  "daliySign": "เช็คอินประจำวัน",
   "support": {
     "welcome": "ยินดีต้อนรับสู่ศูนย์บริการลูกค้า",
-    "mainCustom": "บริการลูกค้าหลัก",
+    "mainCustom": "ฝ่ายบริการหลัก",
     "agentCoustom": "ตัวแทนฝ่ายบริการลูกค้า",
-    "serviceTop": "บริการสายเฉพาะรายชั่วโมง ความมีน้ำใจมาก่อน"
+    "serviceTop": "บริการตลอด 24 ชั่วโมง ใส่ใจทุกรายละเอียด"
   },
   "selected": "กรุณาเลือก",
   "game": {
     "myCollection": "คอลเลกชันของฉัน"
   },
   "login": {
-    "openFixed": "เริ่มต้นประสบการณ์ขั้นสุดยอด",
-    "inputAccount": "กรุณากรอกหมายเลขบัญชี",
-    "inputRight": "กรุณากรอกเนื้อหาที่ถูกต้อง",
+    "openFixed": "เปิดประสบการณ์สุดยอด",
+    "inputAccount": "กรุณากรอกบัญชี",
+    "inputRight": "กรุณากรอกข้อมูลที่ถูกต้อง",
     "inputPwd": "กรุณากรอกรหัสผ่าน",
     "login": "เข้าสู่ระบบ",
-    "forgetPwd": "ลืมรหัสผ่านเหรอ?",
-    "register": "ลงทะเบียน",
-    "resetpwdForCustomer": "โปรดติดต่อฝ่ายบริการลูกค้าเพื่อรีเซ็ตรหัสผ่านของคุณ",
+    "forgetPwd": "ลืมรหัสผ่าน?",
+    "register": "สมัครสมาชิก",
+    "resetpwdForCustomer": "กรุณาติดต่อฝ่ายบริการลูกค้าเพื่อรีเซ็ตรหัสผ่าน",
     "loginSuccess": "เข้าสู่ระบบสำเร็จ"
   },
   "rememberMe": "จำรหัสผ่าน",
-  "weiHuZhong": "การบำรุงรักษาเกมแพลตฟอร์ม ...",
+  "weiHuZhong": "กำลังบำรุงรักษาเกมแพลตฟอร์ม...",
   "pay_type": "วิธีการชำระเงิน",
-  "online_pay": "จ่ายเงินออนไลน์",
-  "company_pay": "เงินฝาก บริษัท",
+  "online_pay": "ชำระเงินออนไลน์",
+  "company_pay": "ฝากเงินบริษัท",
   "pay_channel": "ช่องทางการชำระเงิน",
-  "recharge_qrcode": "รหัสการชำระเงิน QR",
-  "recharge_account": "บัญชีการชำระเงิน",
-  "copy": "สำเนา",
-  "recharge_username": "ชื่อชำระเงิน",
-  "upload_cert": "อัปโหลดบัตรกำนัลโอน",
-  "transfer_account": "โอนบัญชี",
-  "transfer_user": "ผู้โอนย้าย",
-  "iput_transfer_amount": "กรุณากรอกชื่อผู้โอน",
-  "transfer_amount": "เติมเงินจำนวน",
-  "input_transfer_amount": "โปรดป้อนจำนวนเงินเติมเงิน",
+  "recharge_qrcode": "QR Code รับเงิน",
+  "recharge_account": "บัญชีรับเงิน",
+  "copy": "คัดลอก",
+  "recharge_username": "ชื่อผู้รับเงิน",
+  "upload_cert": "อัปโหลดหลักฐานการโอน",
+  "transfer_account": "บัญชีโอนเงิน",
+  "transfer_user": "ผู้โอนเงิน",
+  "iput_transfer_amount": "กรุณากรอกชื่อผู้โอนเงิน",
+  "transfer_amount": "จำนวนเงินเติม",
+  "input_transfer_amount": "กรุณากรอกจำนวนเงินเติม",
   "account": "บัญชี",
-  "open_bank": "ธนาคารเปิดบัญชี",
-  "input_recharge_amount": "กรุณากรอกบัญชีโอน",
-  "rechate_address": "เติมที่อยู่",
-  "transfer_address": "เติมที่อยู่",
-  "input_transfer_addr": "โปรดป้อนที่อยู่เติมเงิน",
-  "transfer_out_address": "โอนที่อยู่",
-  "input_transfer_out_addr": "โปรดป้อนที่อยู่กระเป๋าเงินโอน",
+  "open_bank": "ธนาคารที่เปิดบัญชี",
+  "input_recharge_amount": "กรุณากรอกบัญชีโอนเงิน",
+  "rechate_address": "ที่อยู่เติมเงิน",
+  "transfer_address": "ที่อยู่เติมเงิน",
+  "input_transfer_addr": "กรุณากรอกที่อยู่เติมเงิน",
+  "transfer_out_address": "ที่อยู่โอนออก",
+  "input_transfer_out_addr": "กรุณากรอกที่อยู่กระเป๋าเงินที่โอนออก",
   "game_log": {
-    "not_cpmpelete": "ไม่ได้ตัดสิน",
-    "cancel": "ยกเลิก",
-    "complete": "สมบูรณ์"
+    "not_cpmpelete": "ยังไม่ชำระ",
+    "cancel": "ยกเลิกแล้ว",
+    "complete": "เสร็จสมบูรณ์"
   },
   "register": {
     "username": "ชื่อผู้ใช้",
     "inputUsername": "กรุณากรอกชื่อผู้ใช้",
     "password": "รหัสผ่าน",
-    "inputPassword": "กรุณากรอกรหัสผ่านของคุณ",
+    "inputPassword": "กรุณากรอกรหัสผ่าน",
     "confirmPassword": "ยืนยันรหัสผ่าน",
-    "inputConfirmPassword": "กรุณากรอกรหัสผ่านของคุณอีกครั้ง",
+    "inputConfirmPassword": "กรุณากรอกรหัสผ่านอีกครั้ง",
     "realName": "ชื่อจริง",
-    "inputRealname": "กรุณากรอกชื่อจริงของคุณ",
-    "qkPwd": "การถอนรหัสผ่าน",
-    "inputQkpwd": "กรุณากรอกรหัสผ่านการถอนของคุณ",
+    "inputRealname": "กรุณากรอกชื่อจริง",
+    "qkPwd": "รหัสผ่านถอนเงิน",
+    "inputQkpwd": "กรุณากรอกรหัสผ่านถอนเงิน",
     "phone": "หมายเลขโทรศัพท์",
-    "inputPhone": "กรุณากรอกหมายเลขโทรศัพท์ของคุณ",
+    "inputPhone": "กรุณากรอกหมายเลขโทรศัพท์",
     "currency": "ประเภทสกุลเงิน",
     "inputCurrency": "กรุณาเลือกประเภทสกุลเงิน",
-    "captcha": "รหัสการตรวจสอบ",
-    "inputCaptcha": "กรุณากรอกรหัสการยืนยัน",
-    "inviteCode": "รหัสคำเชิญ",
-    "inputInviterCode": "กรุณากรอกรหัสคำเชิญ",
+    "captcha": "รหัสยืนยัน",
+    "inputCaptcha": "กรุณากรอกรหัสยืนยัน",
+    "inviteCode": "รหัสเชิญ",
+    "inputInviterCode": "กรุณากรอกรหัสเชิญ",
     "email": "อีเมล"
   },
   "vip": {
     "dqCK": "เงินฝากปัจจุบัน",
     "dqBet": "การเดิมพันปัจจุบัน",
-    "amount": "ของขวัญโปรโมชั่น",
+    "amount": "โบนัสเลื่อนระดับ",
     "zhuanXiang": "พิเศษ",
+    "dayLJ": "ของขวัญรายวัน",
     "weekLJ": "ของขวัญรายสัปดาห์",
     "monthLJ": "ของขวัญรายเดือน",
     "brithdayLJ": "ของขวัญวันเกิด",
-    "dayLJ": "ของขวัญประจำวัน",
-    "rightDetail": "รายละเอียดสิทธิพิเศษของวีไอพี"
+    "rightDetail": "รายละเอียดสิทธิพิเศษ VIP"
   },
-  "add": "ใหม่",
-  "sweetWarning": "เคล็ดลับชนิด",
+  "add": "เพิ่ม",
+  "sweetWarning": "คำแนะนำ",
   "deposit": {
-    "detail1": "1. ธนาคารที่ระบุไว้ข้างต้นเป็นธนาคารที่ได้รับการสนับสนุนโดย \"การชำระเงินออนไลน์\" เลือกธนาคารการชำระเงินของคุณ",
-    "detail2": "2. กรอกจำนวนเงินที่คุณต้องการชำระในคอลัมน์ \"ข้อจำกัดความรับผิดชอบ\" และคลิกปุ่ม \"ส่ง\"",
-    "detail3": "3. หลังจากการฝากเงินสำเร็จคุณต้องไปถึงจำนวนเงินเดิมพันที่มีประสิทธิภาพสองเท่าก่อนที่คุณจะสามารถถอนเงินได้"
+    "detail1": "1. ธนาคารที่แสดงด้านบนเป็นธนาคารที่รองรับ \"การชำระเงินออนไลน์\" เลือกธนาคารที่คุณต้องการชำระเงิน",
+    "detail2": "2. กรอกจำนวนเงินที่ต้องการชำระในช่อง \"จำนวนเงินฝาก\" และคลิกปุ่ม \"ส่ง\"",
+    "detail3": "3. หลังจากฝากเงินสำเร็จ ต้องเดิมพันครบ 1 เท่าของยอดฝากจึงจะถอนเงินได้ (ป้องกันการฟอกเงิน)"
   },
-  "youhuihuodong": "ส่วนลด"
+  "youhuihuodong": "กิจกรรมโปรโมชั่น",
+  "systemAnnouncement": "ประกาศระบบ",
+  "customerService": "ฝ่ายบริการลูกค้า",
+  "financeAddress": "ที่อยู่การเงิน",
+  "clickToOpen": "คลิกเพื่อเปิด",
+  "hotline": "สายด่วน",
+  "rechargeRecord": "ประวัติการเติมเงิน",
+  "rechargeAmount": "จำนวนเงินเติม",
+  "transferBankName": "ชื่อธนาคารที่โอน",
+  "inputTransferBankName": "กรุณากรอกชื่อธนาคารที่โอน",
+  "inputBankCardNumber": "กรุณากรอกหมายเลขบัตรธนาคาร",
+  "inputHuiwangAccount": "กรุณากรอกบัญชี Huiwang",
+  "inputUSDTAddress": "กรุณากรอกที่อยู่กระเป๋า USDT",
+  "rechargeSubmitSuccess": "ส่งคำขอเติมเงินสำเร็จ",
+  "warmTips": "คำแนะนำ",
+  "rebateRecord": "ประวัติเงินคืน",
+  "commissionRecord": "ประวัติค่าคอมมิชชั่น",
+  "subordinateMembers": "สมาชิกระดับล่าง",
+  "teamInfo": "ข้อมูลทีม",
+  "agentRecord": "บันทึกตัวแทน",
+  "adjustProportion": "ปรับสัดส่วน",
+  "addCredits": "เพิ่มเครดิต",
+  "memberAddCredits": "เพิ่มเครดิตสมาชิก",
+  "confirmTransfer": "ยืนยันการโอน",
+  "transferAmountTip1": "จำนวนเงินโอนจะถูกหักจากยอดคงเหลือของคุณ",
+  "transferAmountTip2": "การโอนจะเข้าบัญชีทันทีและไม่สามารถยกเลิกได้",
+  "transferAmountTip3": "กรุณาตรวจสอบข้อมูลสมาชิกและจำนวนเงินอย่างละเอียด",
+  "setAsDefault": "ตั้งเป็นค่าเริ่มต้น",
+  "confirmSetDefault": "ยืนยันการตั้งบัญชีนี้เป็นค่าเริ่มต้น?",
+  "alreadyDefault": "บัญชีนี้เป็นค่าเริ่มต้นอยู่แล้ว",
+  "settingSuccess": "ตั้งค่าสำเร็จ",
+  "settingFailed": "ตั้งค่าล้มเหลว",
+  "nickname": "ชื่อเล่น",
+  "inputNickname": "กรุณากรอกชื่อเล่น",
+  "hotGames": "เกมยอดนิยม",
+  "sportsEvents": "กีฬา",
+  "liveCasino": "คาสิโนสด",
+  "electronicGames": "เกมอิเล็กทรอนิกส์",
+  "cardGames": "เกมไพ่",
+  "fishingGames": "เกมตกปลา",
+  "lotteryGames": "เกมลอตเตอรี่",
+  "edit": "แก้ไข",
+  "delete": "ลบ",
+  "save": "บันทึก",
+  "cancel": "ยกเลิก",
+  "refresh": "รีเฟรช",
+  "search": "ค้นหา",
+  "operationFailed": "การดำเนินการล้มเหลว",
+  "pleaseInput": "กรุณากรอก",
+  "pleaseSelect": "กรุณาเลือก",
+  "inputPlaceholder": "กรุณากรอกเนื้อหา",
+  "pending": "รอดำเนินการ",
+  "approved": "อนุมัติแล้ว",
+  "rejected": "ปฏิเสธ",
+  "processing": "กำลังดำเนินการ",
+  "completed": "เสร็จสิ้น",
+  "networkError": "คำขอเครือข่ายล้มเหลว",
+  "tryAgainLater": "กรุณาลองใหม่ภายหลัง",
+  "dataLoadFailed": "โหลดข้อมูลล้มเหลว",
+  "parameterError": "ข้อผิดพลาดพารามิเตอร์",
+  "confirmLogout": "ยืนยันการออกจากระบบ?"
 }
