--- a/src/lang/vi_VN.json
+++ b/src/lang/vi_VN.json
@@ -1,234 +1,295 @@
 {
   "main": {
-    "index": "trang đầu",
-    "gift": "giảm giá",
-    "kf": "dịch vụ khách hàng",
-    "mine": "của tôi",
-    "collectionSuccess": "Bộ sưu tập thành công",
+    "index": "Trang chủ",
+    "gift": "Khuyến mãi",
+    "kf": "Hỗ trợ",
+    "mine": "Của tôi",
+    "collectionSuccess": "Thêm yêu thích thành công",
     "noLogin": "Chưa đăng nhập",
     "loginCheck": "Đăng nhập để xem"
   },
   "user": {
-    "register": "đăng ký",
-    "settings": "cài đặt",
-    "conactUs": "Liên hệ với chúng tôi"
+    "register": "Đăng ký",
+    "settings": "Cài đặt",
+    "conactUs": "Liên hệ chúng tôi"
   },
   "noData": "Không có dữ liệu",
-  "all": "tất cả",
+  "all": "Tất cả",
   "activity_detail": "Chi tiết sự kiện",
   "mine": {
     "safeSetting": "Cài đặt bảo mật",
-    "aboutUs": "về chúng tôi",
+    "aboutUs": "Về chúng tôi",
     "logout": "Đăng xuất",
     "loginPwd": "Mật khẩu đăng nhập",
-    "withdrawPwd": "Rút mật khẩu",
-    "deposit": "tiền gửi",
+    "withdrawPwd": "Mật khẩu rút tiền",
+    "deposit": "Nạp tiền",
     "withdraw": "Rút tiền",
     "vip": "Đặc quyền VIP",
     "quickDeposit": "Nạp tiền nhanh",
-    "sunmitWithdraw": "Đăng ký rút tiền",
+    "sunmitWithdraw": "Yêu cầu rút tiền",
     "bankManage": "Quản lý thẻ ngân hàng",
-    "edit": "Ôn lại",
-    "addBind": "Thêm ràng buộc",
-    "modifyLoginPwd": "Thay đổi mật khẩu đăng nhập",
-    "settingWithdrawalPwd": "Đặt mật khẩu rút tiền",
-    "modifyWithdrawalPwd": "Thay đổi mật khẩu rút tiền",
+    "edit": "Chỉnh sửa",
+    "addBind": "Thêm liên kết",
+    "modifyLoginPwd": "Đổi mật khẩu đăng nhập",
+    "settingWithdrawalPwd": "Cài đặt mật khẩu rút tiền",
+    "modifyWithdrawalPwd": "Đổi mật khẩu rút tiền",
     "currPwd": "Mật khẩu hiện tại",
-    "inputCurrPwd": "Vui lòng điền mật khẩu cũ",
+    "inputCurrPwd": "Vui lòng nhập mật khẩu cũ",
     "newPwd": "Mật khẩu mới",
-    "inputNewPwd": "Vui lòng điền mật khẩu mới",
+    "inputNewPwd": "Vui lòng nhập mật khẩu mới",
     "confrmNewPwd": "Xác nhận mật khẩu mới",
-    "newPwdDiff": "Mật khẩu mới được nhập hai lần không nhất quán.",
+    "newPwdDiff": "Mật khẩu mới nhập hai lần không khớp",
     "successAndLoginAgain": "Sửa đổi thành công, vui lòng đăng nhập lại",
     "qknewPwd": "Mật khẩu rút tiền",
     "inputPlz": "Vui lòng nhập",
     "inputPlzAgain": "Vui lòng nhập lại",
-    "inputTisDiff": "Hai đầu vào không nhất quán",
+    "inputTisDiff": "Hai lần nhập không khớp",
     "confrmqkPwd": "Xác nhận mật khẩu rút tiền",
-    "name": "tên người dùng",
-    "canDrawMoney": "Số tiền rút",
-    "shouChannel": "Địa chỉ thanh toán",
+    "name": "Tên người dùng",
+    "canDrawMoney": "Số tiền có thể rút",
+    "shouChannel": "Địa chỉ nhận tiền",
     "cardName": "Tên chủ thẻ",
-    "cardAccount": "tài khoản ngân hàng",
+    "cardAccount": "Tài khoản ngân hàng",
     "drawMoney": "Số tiền rút",
     "drawingPwd": "Mật khẩu rút tiền",
-    "allMoney": "tất cả",
-    "notSetDrawingPwd": "Bạn chưa đặt mật khẩu rút tiền. Vui lòng đặt mật khẩu rút tiền trước khi tiếp tục.",
-    "bindDrawingAddress": "Vui lòng liên kết thẻ ngân hàng của bạn trước",
-    "vipDetial": "Quy tắc khuyến mãi",
-    "vipLiJin": "Tiền thưởng khuyến mãi",
-    "bet": "cá cược",
-    "allDaBiao": "Tất cả các tiêu chuẩn đáp ứng",
-    "moneyLog": "lịch sử giao dịch",
-    "operateType": "Thay đổi loại",
+    "allMoney": "Tất cả",
+    "notSetDrawingPwd": "Bạn chưa cài đặt mật khẩu rút tiền. Vui lòng cài đặt trước khi thao tác",
+    "bindDrawingAddress": "Vui lòng liên kết thẻ ngân hàng trước",
+    "vipDetial": "Quy tắc thăng cấp",
+    "vipLiJin": "Tiền thưởng thăng cấp",
+    "bet": "Cược",
+    "allDaBiao": "Đạt tất cả tiêu chuẩn",
+    "moneyLog": "Lịch sử giao dịch",
+    "operateType": "Loại thay đổi",
     "walletType": "Loại số tiền",
-    "today": "ngày hôm đó",
+    "today": "Hôm nay",
     "yestoday": "Hôm qua",
-    "week": "trong vòng một tuần",
-    "month": "trong vòng một tháng",
-    "all": "tất cả",
-    "money_rebate": "Ví giảm giá",
-    "money_fanyong": "Ví giảm giá",
-    "money": "ví trung tâm",
-    "moneyLogAmount": "Số tiền doanh thu",
-    "validAmount": "Số tiền hiệu quả",
-    "gameLog": "Kỷ lục trò chơi",
-    "totalBetAmount": "Tổng số tiền đặt cược",
-    "totalWinLoss": "Tổng số tiền thắng hoặc thua",
+    "week": "Trong tuần",
+    "month": "Trong tháng",
+    "all": "Tất cả",
+    "money_rebate": "Ví hoàn tiền",
+    "money_fanyong": "Ví hoa hồng",
+    "money": "Ví chính",
+    "moneyLogAmount": "Số tiền lưu chuyển",
+    "validAmount": "Số tiền hợp lệ",
+    "gameLog": "Lịch sử trò chơi",
+    "totalBetAmount": "Tổng tiền cược",
+    "totalWinLoss": "Tổng thắng/thua",
     "apiType": "Loại giao diện",
-    "gameType": "loại trò chơi",
-    "tuiguanG": "Quảng bá và kiếm tiền",
+    "gameType": "Loại trò chơi",
+    "tuiguanG": "Quảng bá kiếm tiền",
     "baseInfo": "Thông tin cơ bản",
-    "transferAmount": "Chuyển đổi tín dụng",
+    "transferAmount": "Chuyển đổi hạn mức",
     "totalBalance": "Số dư tài khoản",
     "inputTransferMoney": "Vui lòng nhập số tiền chuyển",
-    "money2": "Số lượng",
-    "myCollection": "bộ sưu tập của tôi",
-    "myNotices": "tin nhắn của tôi",
-    "balance": "Sự cân bằng",
-    "centerWalletBalance": "Số dư ví trung tâm",
+    "money2": "Số tiền",
+    "myCollection": "Bộ sưu tập của tôi",
+    "myNotices": "Tin nhắn của tôi",
+    "balance": "Số dư",
+    "centerWalletBalance": "Số dư ví chính",
     "toGame": "Vào trò chơi",
     "loveIsHere": "Mọi thứ bạn yêu thích đều ở đây",
     "mxdaikuan": "Vay không lãi suất",
     "yuEBao": "Yu'E Bao",
-    "bankCard": "thẻ ngân hàng",
-    "accountSafe": "Tài khoản và bảo mật",
-    "safest": "Cải thiện thông tin tài khoản và an toàn hơn",
-    "persionalInfo": "thông tin cá nhân",
-    "normalFunc": "Các hàm thường dùng",
-    "centerWallet": "ví trung tâm",
-    "fsWallet": "Ví giả",
-    "welcomeTo": "chào mừng đến",
-    "levelRight": "đặc quyền của lớp",
-    "pullMoney": "Quảng bá và kiếm tiền",
-    "loginRegister": "Đăng nhập/Đăng ký"
+    "bankCard": "Thẻ ngân hàng",
+    "accountSafe": "Tài khoản & Bảo mật",
+    "safest": "Hoàn thiện thông tin tài khoản để an toàn hơn",
+    "persionalInfo": "Thông tin cá nhân",
+    "normalFunc": "Chức năng thường dùng",
+    "centerWallet": "Ví chính",
+    "fsWallet": "Ví hoàn tiền",
+    "welcomeTo": "Chào mừng đến",
+    "levelRight": "Đặc quyền cấp độ",
+    "pullMoney": "Quảng bá kiếm tiền",
+    "loginRegister": "Đăng nhập/Đăng ký",
+    "passwordTooShort": "Mật khẩu phải có ít nhất 6 ký tự"
   },
   "loading": "Đang tải...",
-  "submit": "nộp",
-  "inputNewPwdAgain": "Vui lòng điền lại mật khẩu mới",
-  "success": "Hoạt động thành công",
-  "noMore": "không còn nữa",
+  "submit": "Gửi",
+  "inputNewPwdAgain": "Vui lòng nhập lại mật khẩu mới",
+  "success": "Thao tác thành công",
+  "noMore": "Không còn nữa",
   "moneyLog": {
-    "detail": "ghi lại chi tiết",
+    "detail": "Chi tiết giao dịch",
     "tradeMoney": "Số tiền giao dịch",
     "beforeMoney": "Số dư trước khi chuyển",
     "afterMoney": "Số dư sau khi chuyển",
-    "walletType": "loại ví",
-    "transferType": "Kiểu chuyển",
-    "desc": "Mô tả hoạt động",
-    "tradeDate": "giờ giao dịch",
-    "status": "Tình trạng trò chơi"
+    "walletType": "Loại ví",
+    "transferType": "Loại chuyển khoản",
+    "desc": "Mô tả thao tác",
+    "tradeDate": "Thời gian giao dịch",
+    "status": "Trạng thái trò chơi"
   },
-  "fillIn": "điền vào",
+  "fillIn": "Điền vào",
   "changeAuto": "Chuyển sang tự động",
-  "changeManual": "Chuyển sang hướng dẫn sử dụng",
-  "confirm": "xác nhận",
-  "dianzi": "trò chơi điện tử",
+  "changeManual": "Chuyển sang thủ công",
+  "confirm": "Xác nhận",
+  "dianzi": "Trò chơi điện tử",
   "zhenren": "Trò chơi trực tiếp",
-  "tiyu": "trò chơi thể thao",
-  "lottery": "trò chơi xổ số",
-  "qipai": "trò chơi trên bàn",
-  "fishGame": "trò chơi câu cá",
+  "tiyu": "Trò chơi thể thao",
+  "lottery": "Trò chơi xổ số",
+  "qipai": "Trò chơi bài",
+  "fishGame": "Trò chơi câu cá",
   "noRecord": "Chưa có dữ liệu",
-  "unread": "chưa đọc",
-  "readed": "Đọc",
-  "transferIn": "chuyển vào",
-  "inputTransferInAmount": "Vui lòng nhập số tiền chuyển",
-  "todayDoNotShow": "Đừng hiển thị lại hôm nay",
+  "unread": "Chưa đọc",
+  "readed": "Đã đọc",
+  "transferIn": "Chuyển vào",
+  "inputTransferInAmount": "Vui lòng nhập số tiền chuyển vào",
+  "todayDoNotShow": "Hôm nay không hiển thị nữa",
   "enterGame": "Vào trò chơi",
   "transferInMoneyMustThan0": "Số tiền chuyển phải lớn hơn 0",
-  "refreshBalanceFailed": "Không thể làm mới số dư",
-  "depositFailed": "Không thể chuyển đổi tín dụng",
-  "moneyTransferMoneyNot": "Các ví không thể chuyển đổi lẫn nhau",
-  "daliySign": "Nhận phòng hàng ngày",
+  "refreshBalanceFailed": "Làm mới số dư thất bại",
+  "depositFailed": "Chuyển đổi hạn mức thất bại",
+  "moneyTransferMoneyNot": "Không thể chuyển đổi giữa các ví",
+  "daliySign": "Điểm danh hàng ngày",
   "support": {
-    "welcome": "Chào mừng đến với trung tâm dịch vụ khách hàng",
-    "mainCustom": "Dịch vụ khách hàng tuyến chính",
-    "agentCoustom": "đại diện dịch vụ khách hàng",
-    "serviceTop": "Dịch vụ trực tuyến tận tâm hàng giờ, sự ân cần đặt lên hàng đầu"
+    "welcome": "Chào mừng đến trung tâm dịch vụ khách hàng",
+    "mainCustom": "Dịch vụ khách hàng chính",
+    "agentCoustom": "Đại diện dịch vụ khách hàng",
+    "serviceTop": "Dịch vụ 24/7 tận tâm phục vụ"
   },
   "selected": "Vui lòng chọn",
   "game": {
-    "myCollection": "bộ sưu tập của tôi"
+    "myCollection": "Bộ sưu tập của tôi"
   },
   "login": {
-    "openFixed": "Bắt đầu trải nghiệm đỉnh cao",
-    "inputAccount": "Vui lòng nhập số tài khoản",
-    "inputRight": "Vui lòng nhập đúng nội dung",
+    "openFixed": "Bắt đầu trải nghiệm tuyệt vời",
+    "inputAccount": "Vui lòng nhập tài khoản",
+    "inputRight": "Vui lòng nhập nội dung chính xác",
     "inputPwd": "Vui lòng nhập mật khẩu",
     "login": "Đăng nhập",
-    "forgetPwd": "quên mật khẩu?",
-    "register": "đăng ký",
-    "resetpwdForCustomer": "Vui lòng liên hệ bộ phận chăm sóc khách hàng để đặt lại mật khẩu của bạn",
+    "forgetPwd": "Quên mật khẩu?",
+    "register": "Đăng ký",
+    "resetpwdForCustomer": "Vui lòng liên hệ dịch vụ khách hàng để đặt lại mật khẩu",
     "loginSuccess": "Đăng nhập thành công"
   },
   "rememberMe": "Nhớ mật khẩu",
-  "weiHuZhong": "Bảo trì trò chơi nền tảng ...",
+  "weiHuZhong": "Đang bảo trì nền tảng trò chơi...",
   "pay_type": "Phương thức thanh toán",
-  "online_pay": "Trả tiền trực tuyến",
-  "company_pay": "Tiền gửi của công ty",
+  "online_pay": "Thanh toán trực tuyến",
+  "company_pay": "Nạp tiền công ty",
   "pay_channel": "Kênh thanh toán",
   "recharge_qrcode": "Mã QR thanh toán",
   "recharge_account": "Tài khoản thanh toán",
-  "copy": "sao chép",
-  "recharge_username": "Tên thanh toán",
-  "upload_cert": "Tải lên chứng từ chuyển lên",
-  "transfer_account": "Tài khoản chuyển nhượng",
-  "transfer_user": "Người chuyển nhượng",
-  "iput_transfer_amount": "Vui lòng nhập tên của người chuyển nhượng",
-  "transfer_amount": "Lượng sạc lại",
-  "input_transfer_amount": "Vui lòng nhập số tiền sạc",
-  "account": "tài khoản",
+  "copy": "Sao chép",
+  "recharge_username": "Tên người nhận tiền",
+  "upload_cert": "Tải lên chứng từ chuyển khoản",
+  "transfer_account": "Tài khoản chuyển",
+  "transfer_user": "Người chuyển",
+  "iput_transfer_amount": "Vui lòng nhập tên người chuyển",
+  "transfer_amount": "Số tiền nạp",
+  "input_transfer_amount": "Vui lòng nhập số tiền nạp",
+  "account": "Tài khoản",
   "open_bank": "Ngân hàng mở tài khoản",
-  "input_recharge_amount": "Vui lòng nhập tài khoản chuyển nhượng",
+  "input_recharge_amount": "Vui lòng nhập tài khoản chuyển",
   "rechate_address": "Địa chỉ nạp tiền",
   "transfer_address": "Địa chỉ nạp tiền",
-  "input_transfer_addr": "Vui lòng nhập địa chỉ sạc lại",
+  "input_transfer_addr": "Vui lòng nhập địa chỉ nạp tiền",
   "transfer_out_address": "Địa chỉ chuyển",
   "input_transfer_out_addr": "Vui lòng nhập địa chỉ ví chuyển",
   "game_log": {
-    "not_cpmpelete": "Không giải quyết",
-    "cancel": "Bị hủy bỏ",
+    "not_cpmpelete": "Chưa thanh toán",
+    "cancel": "Đã hủy",
     "complete": "Hoàn thành"
   },
   "register": {
     "username": "Tên người dùng",
-    "inputUsername": "Vui lòng điền vào tên người dùng",
-    "password": "mật khẩu",
-    "inputPassword": "Vui lòng điền mật khẩu của bạn",
+    "inputUsername": "Vui lòng nhập tên người dùng",
+    "password": "Mật khẩu",
+    "inputPassword": "Vui lòng nhập mật khẩu",
     "confirmPassword": "Xác nhận mật khẩu",
-    "inputConfirmPassword": "Vui lòng điền vào mật khẩu của bạn một lần nữa",
+    "inputConfirmPassword": "Vui lòng nhập lại mật khẩu",
     "realName": "Tên thật",
-    "inputRealname": "Vui lòng điền vào tên thật của bạn",
+    "inputRealname": "Vui lòng nhập tên thật",
     "qkPwd": "Mật khẩu rút tiền",
-    "inputQkpwd": "Vui lòng điền mật khẩu rút tiền của bạn",
+    "inputQkpwd": "Vui lòng nhập mật khẩu rút tiền",
     "phone": "Số điện thoại",
-    "inputPhone": "Vui lòng điền vào số điện thoại của bạn",
+    "inputPhone": "Vui lòng nhập số điện thoại",
     "currency": "Loại tiền tệ",
     "inputCurrency": "Vui lòng chọn loại tiền tệ",
     "captcha": "Mã xác minh",
-    "inputCaptcha": "Vui lòng điền vào mã xác minh",
-    "inviteCode": "Mã lời mời",
-    "inputInviterCode": "Vui lòng điền vào mã lời mời",
-    "email": "E-mail"
+    "inputCaptcha": "Vui lòng nhập mã xác minh",
+    "inviteCode": "Mã mời",
+    "inputInviterCode": "Vui lòng nhập mã mời",
+    "email": "Email"
   },
   "vip": {
     "dqCK": "Tiền gửi hiện tại",
-    "dqBet": "Cá cược hiện tại",
-    "amount": "Quà tặng khuyến mãi",
-    "zhuanXiang": "Loại trừ",
-    "dayLJ": "Món quà hàng ngày",
-    "weekLJ": "Món quà hàng tuần",
+    "dqBet": "Cược hiện tại",
+    "amount": "Tiền thưởng thăng cấp",
+    "zhuanXiang": "Độc quyền",
+    "dayLJ": "Quà tặng hàng ngày",
+    "weekLJ": "Quà tặng hàng tuần",
     "monthLJ": "Quà tặng hàng tháng",
-    "brithdayLJ": "Món quà sinh nhật",
+    "brithdayLJ": "Quà tặng sinh nhật",
     "rightDetail": "Chi tiết đặc quyền VIP"
   },
-  "add": "Mới",
-  "sweetWarning": "Lời khuyên tử tế",
+  "add": "Thêm mới",
+  "sweetWarning": "Lời khuyên",
   "deposit": {
-    "detail1": "1. Các ngân hàng được liệt kê ở trên là các ngân hàng được hỗ trợ bởi \"thanh toán trực tuyến\". Chọn ngân hàng thanh toán của bạn.",
-    "detail2": "2. Điền vào số tiền bạn muốn trả trong cột \"số tiền từ chối trách nhiệm\" và nhấp vào nút \"Gửi\".",
-    "detail3": "3. Sau khi tiền gửi thành công, bạn phải đạt gấp đôi số tiền đặt cược hiệu quả trước khi bạn có thể rút tiền (rút tiền mặt và rửa tiền)."
+    "detail1": "1. Các ngân hàng được liệt kê ở trên là ngân hàng được hỗ trợ bởi \"Thanh toán trực tuyến\". Chọn ngân hàng thanh toán của bạn.",
+    "detail2": "2. Điền số tiền bạn muốn thanh toán trong cột \"Số tiền gửi\" và nhấp vào nút \"Gửi\".",
+    "detail3": "3. Sau khi gửi tiền thành công, bạn phải đạt 1 lần số tiền cược hợp lệ mới có thể rút tiền (Chống rửa tiền)."
   },
-  "youhuihuodong": "Giảm giá"
+  "youhuihuodong": "Hoạt động khuyến mãi",
+  "systemAnnouncement": "Thông báo hệ thống",
+  "customerService": "Dịch vụ khách hàng",
+  "financeAddress": "Địa chỉ tài chính",
+  "clickToOpen": "Nhấp để mở",
+  "hotline": "Đường dây nóng",
+  "rechargeRecord": "Lịch sử nạp tiền",
+  "rechargeAmount": "Số tiền nạp",
+  "transferBankName": "Tên ngân hàng chuyển",
+  "inputTransferBankName": "Vui lòng nhập tên ngân hàng chuyển",
+  "inputBankCardNumber": "Vui lòng nhập số thẻ ngân hàng",
+  "inputHuiwangAccount": "Vui lòng nhập tài khoản Huiwang",
+  "inputUSDTAddress": "Vui lòng nhập địa chỉ ví USDT",
+  "rechargeSubmitSuccess": "Gửi yêu cầu nạp tiền thành công",
+  "warmTips": "Lời khuyên",
+  "rebateRecord": "Lịch sử hoàn tiền",
+  "commissionRecord": "Lịch sử hoa hồng",
+  "subordinateMembers": "Thành viên cấp dưới",
+  "teamInfo": "Thông tin nhóm",
+  "agentRecord": "Hồ sơ đại lý",
+  "adjustProportion": "Điều chỉnh tỷ lệ",
+  "addCredits": "Thêm tín dụng",
+  "memberAddCredits": "Thêm tín dụng thành viên",
+  "confirmTransfer": "Xác nhận chuyển khoản",
+  "transferAmountTip1": "Số tiền chuyển sẽ được khấu trừ từ số dư của bạn",
+  "transferAmountTip2": "Chuyển khoản sẽ được ghi có ngay lập tức và không thể hoàn tác",
+  "transferAmountTip3": "Vui lòng kiểm tra kỹ thông tin thành viên và số tiền",
+  "setAsDefault": "Đặt làm mặc định",
+  "confirmSetDefault": "Xác nhận đặt tài khoản này làm mặc định?",
+  "alreadyDefault": "Tài khoản này đã là mặc định",
+  "settingSuccess": "Cài đặt thành công",
+  "settingFailed": "Cài đặt thất bại",
+  "nickname": "Biệt danh",
+  "inputNickname": "Vui lòng nhập biệt danh",
+  "hotGames": "Trò chơi hot",
+  "sportsEvents": "Sự kiện thể thao",
+  "liveCasino": "Casino trực tiếp",
+  "electronicGames": "Trò chơi điện tử",
+  "cardGames": "Trò chơi bài",
+  "fishingGames": "Trò chơi câu cá",
+  "lotteryGames": "Trò chơi xổ số",
+  "edit": "Chỉnh sửa",
+  "delete": "Xóa",
+  "save": "Lưu",
+  "cancel": "Hủy",
+  "refresh": "Làm mới",
+  "search": "Tìm kiếm",
+  "operationFailed": "Thao tác thất bại",
+  "pleaseInput": "Vui lòng nhập",
+  "pleaseSelect": "Vui lòng chọn",
+  "inputPlaceholder": "Vui lòng nhập nội dung",
+  "pending": "Đang chờ",
+  "approved": "Đã duyệt",
+  "rejected": "Đã từ chối",
+  "processing": "Đang xử lý",
+  "completed": "Hoàn thành",
+  "networkError": "Yêu cầu mạng thất bại",
+  "tryAgainLater": "Vui lòng thử lại sau",
+  "dataLoadFailed": "Tải dữ liệu thất bại",
+  "parameterError": "Lỗi tham số",
+  "confirmLogout": "Xác nhận đăng xuất?"
 }
